sdk-docs_versioned_docs/version-19.0.0/enums/Types/CallIdEnum/CallIdEnum.md
---
id: "CallIdEnum"
title: "Enumeration: CallIdEnum"
sidebar_label: "CallIdEnum"
---

[types](../../../modules/Types/Types.md).CallIdEnum

\n@enumName CallIdEnum

## Enumeration Members

### Abdicate

• **Abdicate** = ``"abdicate"``

#### Defined in

[middleware/typesV2.ts:23786](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23786)

___

### AbdicateMembership

• **AbdicateMembership** = ``"abdicate_membership"``

#### Defined in

[middleware/typesV2.ts:23787](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23787)

___

### AcceptAssetOwnershipTransfer

• **AcceptAssetOwnershipTransfer** = ``"accept_asset_ownership_transfer"``

#### Defined in

[middleware/typesV2.ts:23788](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23788)

___

### AcceptAuthorization

• **AcceptAuthorization** = ``"accept_authorization"``

#### Defined in

[middleware/typesV2.ts:23789](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23789)

___

### AcceptBecomeAgent

• **AcceptBecomeAgent** = ``"accept_become_agent"``

#### Defined in

[middleware/typesV2.ts:23790](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23790)

___

### AcceptMasterKey

• **AcceptMasterKey** = ``"accept_master_key"``

#### Defined in

[middleware/typesV2.ts:23791](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23791)

___

### AcceptMultisigSignerAsIdentity

• **AcceptMultisigSignerAsIdentity** = ``"accept_multisig_signer_as_identity"``

#### Defined in

[middleware/typesV2.ts:23792](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23792)

___

### AcceptMultisigSignerAsKey

• **AcceptMultisigSignerAsKey** = ``"accept_multisig_signer_as_key"``

#### Defined in

[middleware/typesV2.ts:23793](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23793)

___

### AcceptPayingKey

• **AcceptPayingKey** = ``"accept_paying_key"``

#### Defined in

[middleware/typesV2.ts:23794](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23794)

___

### AcceptPortfolioCustody

• **AcceptPortfolioCustody** = ``"accept_portfolio_custody"``

#### Defined in

[middleware/typesV2.ts:23795](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23795)

___

### AcceptPrimaryIssuanceAgentTransfer

• **AcceptPrimaryIssuanceAgentTransfer** = ``"accept_primary_issuance_agent_transfer"``

#### Defined in

[middleware/typesV2.ts:23796](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23796)

___

### AcceptPrimaryKey

• **AcceptPrimaryKey** = ``"accept_primary_key"``

#### Defined in

[middleware/typesV2.ts:23797](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23797)

___

### AcceptTickerTransfer

• **AcceptTickerTransfer** = ``"accept_ticker_transfer"``

#### Defined in

[middleware/typesV2.ts:23798](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23798)

___

### AddActiveRule

• **AddActiveRule** = ``"add_active_rule"``

#### Defined in

[middleware/typesV2.ts:23799](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23799)

___

### AddAndAffirmInstruction

• **AddAndAffirmInstruction** = ``"add_and_affirm_instruction"``

#### Defined in

[middleware/typesV2.ts:23800](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23800)

___

### AddAndAffirmInstructionWithMemo

• **AddAndAffirmInstructionWithMemo** = ``"add_and_affirm_instruction_with_memo"``

#### Defined in

[middleware/typesV2.ts:23801](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23801)

___

### AddAndAuthorizeInstruction

• **AddAndAuthorizeInstruction** = ``"add_and_authorize_instruction"``

#### Defined in

[middleware/typesV2.ts:23802](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23802)

___

### AddAuthorization

• **AddAuthorization** = ``"add_authorization"``

#### Defined in

[middleware/typesV2.ts:23803](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23803)

___

### AddBallot

• **AddBallot** = ``"add_ballot"``

#### Defined in

[middleware/typesV2.ts:23804](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23804)

___

### AddClaim

• **AddClaim** = ``"add_claim"``

#### Defined in

[middleware/typesV2.ts:23805](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23805)

___

### AddComplianceRequirement

• **AddComplianceRequirement** = ``"add_compliance_requirement"``

#### Defined in

[middleware/typesV2.ts:23806](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23806)

___

### AddDefaultTrustedClaimIssuer

• **AddDefaultTrustedClaimIssuer** = ``"add_default_trusted_claim_issuer"``

#### Defined in

[middleware/typesV2.ts:23807](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23807)

___

### AddDocuments

• **AddDocuments** = ``"add_documents"``

#### Defined in

[middleware/typesV2.ts:23808](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23808)

___

### AddExemptedEntities

• **AddExemptedEntities** = ``"add_exempted_entities"``

#### Defined in

[middleware/typesV2.ts:23809](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23809)

___

### AddExtension

• **AddExtension** = ``"add_extension"``

#### Defined in

[middleware/typesV2.ts:23810](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23810)

___

### AddFreezeAdmin

• **AddFreezeAdmin** = ``"add_freeze_admin"``

#### Defined in

[middleware/typesV2.ts:23811](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23811)

___

### AddInstruction

• **AddInstruction** = ``"add_instruction"``

#### Defined in

[middleware/typesV2.ts:23812](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23812)

___

### AddInstructionWithMemo

• **AddInstructionWithMemo** = ``"add_instruction_with_memo"``

#### Defined in

[middleware/typesV2.ts:23813](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23813)

___

### AddInvestorUniquenessClaim

• **AddInvestorUniquenessClaim** = ``"add_investor_uniqueness_claim"``

#### Defined in

[middleware/typesV2.ts:23814](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23814)

___

### AddInvestorUniquenessClaimV2

• **AddInvestorUniquenessClaimV2** = ``"add_investor_uniqueness_claim_v2"``

#### Defined in

[middleware/typesV2.ts:23815](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23815)

___

### AddMember

• **AddMember** = ``"add_member"``

#### Defined in

[middleware/typesV2.ts:23816](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23816)

___

### AddMultisigSigner

• **AddMultisigSigner** = ``"add_multisig_signer"``

#### Defined in

[middleware/typesV2.ts:23817](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23817)

___

### AddMultisigSignersViaCreator

• **AddMultisigSignersViaCreator** = ``"add_multisig_signers_via_creator"``

#### Defined in

[middleware/typesV2.ts:23818](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23818)

___

### AddPermissionedValidator

• **AddPermissionedValidator** = ``"add_permissioned_validator"``

#### Defined in

[middleware/typesV2.ts:23819](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23819)

___

### AddRangeProof

• **AddRangeProof** = ``"add_range_proof"``

#### Defined in

[middleware/typesV2.ts:23820](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23820)

___

### AddSecondaryKeysWithAuthorization

• **AddSecondaryKeysWithAuthorization** = ``"add_secondary_keys_with_authorization"``

#### Defined in

[middleware/typesV2.ts:23821](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23821)

___

### AddSecondaryKeysWithAuthorizationOld

• **AddSecondaryKeysWithAuthorizationOld** = ``"add_secondary_keys_with_authorization_old"``

#### Defined in

[middleware/typesV2.ts:23822](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23822)

___

### AddTransferManager

• **AddTransferManager** = ``"add_transfer_manager"``

#### Defined in

[middleware/typesV2.ts:23823](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23823)

___

### AddVerifyRangeProof

• **AddVerifyRangeProof** = ``"add_verify_range_proof"``

#### Defined in

[middleware/typesV2.ts:23824](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23824)

___

### AffirmInstruction

• **AffirmInstruction** = ``"affirm_instruction"``

#### Defined in

[middleware/typesV2.ts:23825](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23825)

___

### AffirmWithReceipts

• **AffirmWithReceipts** = ``"affirm_with_receipts"``

#### Defined in

[middleware/typesV2.ts:23826](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23826)

___

### AllowVenues

• **AllowVenues** = ``"allow_venues"``

#### Defined in

[middleware/typesV2.ts:23827](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23827)

___

### AmendProposal

• **AmendProposal** = ``"amend_proposal"``

#### Defined in

[middleware/typesV2.ts:23828](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23828)

___

### Approve

• **Approve** = ``"approve"``

#### Defined in

[middleware/typesV2.ts:23829](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23829)

___

### ApproveAsIdentity

• **ApproveAsIdentity** = ``"approve_as_identity"``

#### Defined in

[middleware/typesV2.ts:23830](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23830)

___

### ApproveAsKey

• **ApproveAsKey** = ``"approve_as_key"``

#### Defined in

[middleware/typesV2.ts:23831](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23831)

___

### ApproveCommitteeProposal

• **ApproveCommitteeProposal** = ``"approve_committee_proposal"``

#### Defined in

[middleware/typesV2.ts:23832](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23832)

___

### ArchiveExtension

• **ArchiveExtension** = ``"archive_extension"``

#### Defined in

[middleware/typesV2.ts:23833](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23833)

___

### AttachBallot

• **AttachBallot** = ``"attach_ballot"``

#### Defined in

[middleware/typesV2.ts:23834](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23834)

___

### AuthorizeInstruction

• **AuthorizeInstruction** = ``"authorize_instruction"``

#### Defined in

[middleware/typesV2.ts:23835](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23835)

___

### AuthorizeWithReceipts

• **AuthorizeWithReceipts** = ``"authorize_with_receipts"``

#### Defined in

[middleware/typesV2.ts:23836](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23836)

___

### Batch

• **Batch** = ``"batch"``

#### Defined in

[middleware/typesV2.ts:23837](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23837)

___

### BatchAcceptAuthorization

• **BatchAcceptAuthorization** = ``"batch_accept_authorization"``

#### Defined in

[middleware/typesV2.ts:23838](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23838)

___

### BatchAddAuthorization

• **BatchAddAuthorization** = ``"batch_add_authorization"``

#### Defined in

[middleware/typesV2.ts:23839](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23839)

___

### BatchAddClaim

• **BatchAddClaim** = ``"batch_add_claim"``

#### Defined in

[middleware/typesV2.ts:23840](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23840)

___

### BatchAddDefaultTrustedClaimIssuer

• **BatchAddDefaultTrustedClaimIssuer** = ``"batch_add_default_trusted_claim_issuer"``

#### Defined in

[middleware/typesV2.ts:23841](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23841)

___

### BatchAddDocument

• **BatchAddDocument** = ``"batch_add_document"``

#### Defined in

[middleware/typesV2.ts:23842](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23842)

___

### BatchAddSecondaryKeyWithAuthorization

• **BatchAddSecondaryKeyWithAuthorization** = ``"batch_add_secondary_key_with_authorization"``

#### Defined in

[middleware/typesV2.ts:23843](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23843)

___

### BatchAddSigningKeyWithAuthorization

• **BatchAddSigningKeyWithAuthorization** = ``"batch_add_signing_key_with_authorization"``

#### Defined in

[middleware/typesV2.ts:23844](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23844)

___

### BatchAtomic

• **BatchAtomic** = ``"batch_atomic"``

#### Defined in

[middleware/typesV2.ts:23845](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23845)

___

### BatchChangeAssetRule

• **BatchChangeAssetRule** = ``"batch_change_asset_rule"``

#### Defined in

[middleware/typesV2.ts:23846](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23846)

___

### BatchChangeComplianceRequirement

• **BatchChangeComplianceRequirement** = ``"batch_change_compliance_requirement"``

#### Defined in

[middleware/typesV2.ts:23847](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23847)

___

### BatchForceHandleBridgeTx

• **BatchForceHandleBridgeTx** = ``"batch_force_handle_bridge_tx"``

#### Defined in

[middleware/typesV2.ts:23848](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23848)

___

### BatchFreezeTx

• **BatchFreezeTx** = ``"batch_freeze_tx"``

#### Defined in

[middleware/typesV2.ts:23849](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23849)

___

### BatchHandleBridgeTx

• **BatchHandleBridgeTx** = ``"batch_handle_bridge_tx"``

#### Defined in

[middleware/typesV2.ts:23850](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23850)

___

### BatchIssue

• **BatchIssue** = ``"batch_issue"``

#### Defined in

[middleware/typesV2.ts:23851](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23851)

___

### BatchOptimistic

• **BatchOptimistic** = ``"batch_optimistic"``

#### Defined in

[middleware/typesV2.ts:23852](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23852)

___

### BatchProposeBridgeTx

• **BatchProposeBridgeTx** = ``"batch_propose_bridge_tx"``

#### Defined in

[middleware/typesV2.ts:23853](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23853)

___

### BatchRemoveAuthorization

• **BatchRemoveAuthorization** = ``"batch_remove_authorization"``

#### Defined in

[middleware/typesV2.ts:23854](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23854)

___

### BatchRemoveDefaultTrustedClaimIssuer

• **BatchRemoveDefaultTrustedClaimIssuer** = ``"batch_remove_default_trusted_claim_issuer"``

#### Defined in

[middleware/typesV2.ts:23855](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23855)

___

### BatchRemoveDocument

• **BatchRemoveDocument** = ``"batch_remove_document"``

#### Defined in

[middleware/typesV2.ts:23856](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23856)

___

### BatchRevokeClaim

• **BatchRevokeClaim** = ``"batch_revoke_claim"``

#### Defined in

[middleware/typesV2.ts:23857](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23857)

___

### BatchUnfreezeTx

• **BatchUnfreezeTx** = ``"batch_unfreeze_tx"``

#### Defined in

[middleware/typesV2.ts:23858](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23858)

___

### BatchUpdateAssetStats

• **BatchUpdateAssetStats** = ``"batch_update_asset_stats"``

#### Defined in

[middleware/typesV2.ts:23859](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23859)

___

### Bond

• **Bond** = ``"bond"``

#### Defined in

[middleware/typesV2.ts:23860](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23860)

___

### BondAdditionalDeposit

• **BondAdditionalDeposit** = ``"bond_additional_deposit"``

#### Defined in

[middleware/typesV2.ts:23861](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23861)

___

### BondExtra

• **BondExtra** = ``"bond_extra"``

#### Defined in

[middleware/typesV2.ts:23862](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23862)

___

### BurnAccountBalance

• **BurnAccountBalance** = ``"burn_account_balance"``

#### Defined in

[middleware/typesV2.ts:23863](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23863)

___

### BuyTokens

• **BuyTokens** = ``"buy_tokens"``

#### Defined in

[middleware/typesV2.ts:23864](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23864)

___

### Call

• **Call** = ``"call"``

#### Defined in

[middleware/typesV2.ts:23865](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23865)

___

### Cancel

• **Cancel** = ``"cancel"``

#### Defined in

[middleware/typesV2.ts:23866](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23866)

___

### CancelBallot

• **CancelBallot** = ``"cancel_ballot"``

#### Defined in

[middleware/typesV2.ts:23867](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23867)

___

### CancelDeferredSlash

• **CancelDeferredSlash** = ``"cancel_deferred_slash"``

#### Defined in

[middleware/typesV2.ts:23868](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23868)

___

### CancelNamed

• **CancelNamed** = ``"cancel_named"``

#### Defined in

[middleware/typesV2.ts:23869](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23869)

___

### CancelProposal

• **CancelProposal** = ``"cancel_proposal"``

#### Defined in

[middleware/typesV2.ts:23870](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23870)

___

### CddRegisterDid

• **CddRegisterDid** = ``"cdd_register_did"``

#### Defined in

[middleware/typesV2.ts:23871](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23871)

___

### CddRegisterDidWithCdd

• **CddRegisterDidWithCdd** = ``"cdd_register_did_with_cdd"``

#### Defined in

[middleware/typesV2.ts:23872](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23872)

___

### ChangeAdmin

• **ChangeAdmin** = ``"change_admin"``

#### Defined in

[middleware/typesV2.ts:23873](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23873)

___

### ChangeAllSignersAndSigsRequired

• **ChangeAllSignersAndSigsRequired** = ``"change_all_signers_and_sigs_required"``

#### Defined in

[middleware/typesV2.ts:23874](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23874)

___

### ChangeAssetRule

• **ChangeAssetRule** = ``"change_asset_rule"``

#### Defined in

[middleware/typesV2.ts:23875](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23875)

___

### ChangeBaseFee

• **ChangeBaseFee** = ``"change_base_fee"``

#### Defined in

[middleware/typesV2.ts:23876](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23876)

___

### ChangeBridgeExempted

• **ChangeBridgeExempted** = ``"change_bridge_exempted"``

#### Defined in

[middleware/typesV2.ts:23877](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23877)

___

### ChangeBridgeLimit

• **ChangeBridgeLimit** = ``"change_bridge_limit"``

#### Defined in

[middleware/typesV2.ts:23878](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23878)

___

### ChangeCddRequirementForMkRotation

• **ChangeCddRequirementForMkRotation** = ``"change_cdd_requirement_for_mk_rotation"``

#### Defined in

[middleware/typesV2.ts:23879](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23879)

___

### ChangeCoefficient

• **ChangeCoefficient** = ``"change_coefficient"``

#### Defined in

[middleware/typesV2.ts:23880](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23880)

___

### ChangeComplianceRequirement

• **ChangeComplianceRequirement** = ``"change_compliance_requirement"``

#### Defined in

[middleware/typesV2.ts:23881](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23881)

___

### ChangeController

• **ChangeController** = ``"change_controller"``

#### Defined in

[middleware/typesV2.ts:23882](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23882)

___

### ChangeEnd

• **ChangeEnd** = ``"change_end"``

#### Defined in

[middleware/typesV2.ts:23883](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23883)

___

### ChangeGroup

• **ChangeGroup** = ``"change_group"``

#### Defined in

[middleware/typesV2.ts:23884](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23884)

___

### ChangeMeta

• **ChangeMeta** = ``"change_meta"``

#### Defined in

[middleware/typesV2.ts:23885](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23885)

___

### ChangeRcv

• **ChangeRcv** = ``"change_rcv"``

#### Defined in

[middleware/typesV2.ts:23886](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23886)

___

### ChangeReceiptValidity

• **ChangeReceiptValidity** = ``"change_receipt_validity"``

#### Defined in

[middleware/typesV2.ts:23887](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23887)

___

### ChangeRecordDate

• **ChangeRecordDate** = ``"change_record_date"``

#### Defined in

[middleware/typesV2.ts:23888](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23888)

___

### ChangeSigsRequired

• **ChangeSigsRequired** = ``"change_sigs_required"``

#### Defined in

[middleware/typesV2.ts:23889](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23889)

___

### ChangeSlashingAllowedFor

• **ChangeSlashingAllowedFor** = ``"change_slashing_allowed_for"``

#### Defined in

[middleware/typesV2.ts:23890](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23890)

___

### ChangeTemplateFees

• **ChangeTemplateFees** = ``"change_template_fees"``

#### Defined in

[middleware/typesV2.ts:23891](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23891)

___

### ChangeTemplateMetaUrl

• **ChangeTemplateMetaUrl** = ``"change_template_meta_url"``

#### Defined in

[middleware/typesV2.ts:23892](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23892)

___

### ChangeTimelock

• **ChangeTimelock** = ``"change_timelock"``

#### Defined in

[middleware/typesV2.ts:23893](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23893)

___

### Chill

• **Chill** = ``"chill"``

#### Defined in

[middleware/typesV2.ts:23894](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23894)

___

### ChillFromGovernance

• **ChillFromGovernance** = ``"chill_from_governance"``

#### Defined in

[middleware/typesV2.ts:23895](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23895)

___

### Claim

• **Claim** = ``"claim"``

#### Defined in

[middleware/typesV2.ts:23896](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23896)

___

### ClaimClassicTicker

• **ClaimClassicTicker** = ``"claim_classic_ticker"``

#### Defined in

[middleware/typesV2.ts:23897](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23897)

___

### ClaimItnReward

• **ClaimItnReward** = ``"claim_itn_reward"``

#### Defined in

[middleware/typesV2.ts:23898](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23898)

___

### ClaimReceipt

• **ClaimReceipt** = ``"claim_receipt"``

#### Defined in

[middleware/typesV2.ts:23899](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23899)

___

### ClaimSurcharge

• **ClaimSurcharge** = ``"claim_surcharge"``

#### Defined in

[middleware/typesV2.ts:23900](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23900)

___

### ClaimUnclaimed

• **ClaimUnclaimed** = ``"claim_unclaimed"``

#### Defined in

[middleware/typesV2.ts:23901](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23901)

___

### ClearSnapshot

• **ClearSnapshot** = ``"clear_snapshot"``

#### Defined in

[middleware/typesV2.ts:23902](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23902)

___

### Close

• **Close** = ``"close"``

#### Defined in

[middleware/typesV2.ts:23903](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23903)

___

### ControllerRedeem

• **ControllerRedeem** = ``"controller_redeem"``

#### Defined in

[middleware/typesV2.ts:23904](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23904)

___

### ControllerTransfer

• **ControllerTransfer** = ``"controller_transfer"``

#### Defined in

[middleware/typesV2.ts:23905](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23905)

___

### CreateAndChangeCustomGroup

• **CreateAndChangeCustomGroup** = ``"create_and_change_custom_group"``

#### Defined in

[middleware/typesV2.ts:23906](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23906)

___

### CreateAsset

• **CreateAsset** = ``"create_asset"``

#### Defined in

[middleware/typesV2.ts:23907](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23907)

___

### CreateAssetAndMint

• **CreateAssetAndMint** = ``"create_asset_and_mint"``

#### Defined in

[middleware/typesV2.ts:23908](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23908)

___

### CreateAssetWithCustomType

• **CreateAssetWithCustomType** = ``"create_asset_with_custom_type"``

#### Defined in

[middleware/typesV2.ts:23909](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23909)

___

### CreateCheckpoint

• **CreateCheckpoint** = ``"create_checkpoint"``

#### Defined in

[middleware/typesV2.ts:23910](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23910)

___

### CreateFundraiser

• **CreateFundraiser** = ``"create_fundraiser"``

#### Defined in

[middleware/typesV2.ts:23911](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23911)

___

### CreateGroup

• **CreateGroup** = ``"create_group"``

#### Defined in

[middleware/typesV2.ts:23912](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23912)

___

### CreateGroupAndAddAuth

• **CreateGroupAndAddAuth** = ``"create_group_and_add_auth"``

#### Defined in

[middleware/typesV2.ts:23913](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23913)

___

### CreateMultisig

• **CreateMultisig** = ``"create_multisig"``

#### Defined in

[middleware/typesV2.ts:23914](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23914)

___

### CreateOrApproveProposalAsIdentity

• **CreateOrApproveProposalAsIdentity** = ``"create_or_approve_proposal_as_identity"``

#### Defined in

[middleware/typesV2.ts:23915](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23915)

___

### CreateOrApproveProposalAsKey

• **CreateOrApproveProposalAsKey** = ``"create_or_approve_proposal_as_key"``

#### Defined in

[middleware/typesV2.ts:23916](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23916)

___

### CreatePortfolio

• **CreatePortfolio** = ``"create_portfolio"``

#### Defined in

[middleware/typesV2.ts:23917](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23917)

___

### CreateProposalAsIdentity

• **CreateProposalAsIdentity** = ``"create_proposal_as_identity"``

#### Defined in

[middleware/typesV2.ts:23918](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23918)

___

### CreateProposalAsKey

• **CreateProposalAsKey** = ``"create_proposal_as_key"``

#### Defined in

[middleware/typesV2.ts:23919](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23919)

___

### CreateSchedule

• **CreateSchedule** = ``"create_schedule"``

#### Defined in

[middleware/typesV2.ts:23920](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23920)

___

### CreateVenue

• **CreateVenue** = ``"create_venue"``

#### Defined in

[middleware/typesV2.ts:23921](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23921)

___

### DecreasePolyxLimit

• **DecreasePolyxLimit** = ``"decrease_polyx_limit"``

#### Defined in

[middleware/typesV2.ts:23922](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23922)

___

### DeletePortfolio

• **DeletePortfolio** = ``"delete_portfolio"``

#### Defined in

[middleware/typesV2.ts:23923](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23923)

___

### DepositBlockRewardReserveBalance

• **DepositBlockRewardReserveBalance** = ``"deposit_block_reward_reserve_balance"``

#### Defined in

[middleware/typesV2.ts:23924](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23924)

___

### DisableMember

• **DisableMember** = ``"disable_member"``

#### Defined in

[middleware/typesV2.ts:23925](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23925)

___

### DisallowVenues

• **DisallowVenues** = ``"disallow_venues"``

#### Defined in

[middleware/typesV2.ts:23926](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23926)

___

### Disbursement

• **Disbursement** = ``"disbursement"``

#### Defined in

[middleware/typesV2.ts:23927](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23927)

___

### Distribute

• **Distribute** = ``"distribute"``

#### Defined in

[middleware/typesV2.ts:23928](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23928)

___

### EmergencyReferendum

• **EmergencyReferendum** = ``"emergency_referendum"``

#### Defined in

[middleware/typesV2.ts:23929](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23929)

___

### EnableIndividualCommissions

• **EnableIndividualCommissions** = ``"enable_individual_commissions"``

#### Defined in

[middleware/typesV2.ts:23930](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23930)

___

### EnactReferendum

• **EnactReferendum** = ``"enact_referendum"``

#### Defined in

[middleware/typesV2.ts:23931](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23931)

___

### EnactSnapshotResults

• **EnactSnapshotResults** = ``"enact_snapshot_results"``

#### Defined in

[middleware/typesV2.ts:23932](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23932)

___

### ExecuteManualInstruction

• **ExecuteManualInstruction** = ``"execute_manual_instruction"``

#### Defined in

[middleware/typesV2.ts:23933](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23933)

___

### ExecuteScheduledInstruction

• **ExecuteScheduledInstruction** = ``"execute_scheduled_instruction"``

#### Defined in

[middleware/typesV2.ts:23934](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23934)

___

### ExecuteScheduledPip

• **ExecuteScheduledPip** = ``"execute_scheduled_pip"``

#### Defined in

[middleware/typesV2.ts:23935](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23935)

___

### ExecuteScheduledProposal

• **ExecuteScheduledProposal** = ``"execute_scheduled_proposal"``

#### Defined in

[middleware/typesV2.ts:23936](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23936)

___

### ExpireScheduledPip

• **ExpireScheduledPip** = ``"expire_scheduled_pip"``

#### Defined in

[middleware/typesV2.ts:23937](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23937)

___

### FastTrackProposal

• **FastTrackProposal** = ``"fast_track_proposal"``

#### Defined in

[middleware/typesV2.ts:23938](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23938)

___

### FillBlock

• **FillBlock** = ``"fill_block"``

#### Defined in

[middleware/typesV2.ts:23939](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23939)

___

### FinalHint

• **FinalHint** = ``"final_hint"``

#### Defined in

[middleware/typesV2.ts:23940](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23940)

___

### ForceHandleBridgeTx

• **ForceHandleBridgeTx** = ``"force_handle_bridge_tx"``

#### Defined in

[middleware/typesV2.ts:23941](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23941)

___

### ForceNewEra

• **ForceNewEra** = ``"force_new_era"``

#### Defined in

[middleware/typesV2.ts:23942](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23942)

___

### ForceNewEraAlways

• **ForceNewEraAlways** = ``"force_new_era_always"``

#### Defined in

[middleware/typesV2.ts:23943](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23943)

___

### ForceNoEras

• **ForceNoEras** = ``"force_no_eras"``

#### Defined in

[middleware/typesV2.ts:23944](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23944)

___

### ForceTransfer

• **ForceTransfer** = ``"force_transfer"``

#### Defined in

[middleware/typesV2.ts:23945](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23945)

___

### ForceUnstake

• **ForceUnstake** = ``"force_unstake"``

#### Defined in

[middleware/typesV2.ts:23946](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23946)

___

### ForwardedCall

• **ForwardedCall** = ``"forwarded_call"``

#### Defined in

[middleware/typesV2.ts:23947](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23947)

___

### Free

• **Free** = ``"free"``

#### Defined in

[middleware/typesV2.ts:23948](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23948)

___

### Freeze

• **Freeze** = ``"freeze"``

#### Defined in

[middleware/typesV2.ts:23949](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23949)

___

### FreezeFundraiser

• **FreezeFundraiser** = ``"freeze_fundraiser"``

#### Defined in

[middleware/typesV2.ts:23950](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23950)

___

### FreezeInstantiation

• **FreezeInstantiation** = ``"freeze_instantiation"``

#### Defined in

[middleware/typesV2.ts:23951](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23951)

___

### FreezeSecondaryKeys

• **FreezeSecondaryKeys** = ``"freeze_secondary_keys"``

#### Defined in

[middleware/typesV2.ts:23952](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23952)

___

### FreezeSigningKeys

• **FreezeSigningKeys** = ``"freeze_signing_keys"``

#### Defined in

[middleware/typesV2.ts:23953](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23953)

___

### FreezeTxs

• **FreezeTxs** = ``"freeze_txs"``

#### Defined in

[middleware/typesV2.ts:23954](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23954)

___

### GcAddCddClaim

• **GcAddCddClaim** = ``"gc_add_cdd_claim"``

#### Defined in

[middleware/typesV2.ts:23955](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23955)

___

### GcRevokeCddClaim

• **GcRevokeCddClaim** = ``"gc_revoke_cdd_claim"``

#### Defined in

[middleware/typesV2.ts:23956](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23956)

___

### GetCddOf

• **GetCddOf** = ``"get_cdd_of"``

#### Defined in

[middleware/typesV2.ts:23957](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23957)

___

### GetMyDid

• **GetMyDid** = ``"get_my_did"``

#### Defined in

[middleware/typesV2.ts:23958](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23958)

___

### HandleBridgeTx

• **HandleBridgeTx** = ``"handle_bridge_tx"``

#### Defined in

[middleware/typesV2.ts:23959](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23959)

___

### HandleScheduledBridgeTx

• **HandleScheduledBridgeTx** = ``"handle_scheduled_bridge_tx"``

#### Defined in

[middleware/typesV2.ts:23960](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23960)

___

### Heartbeat

• **Heartbeat** = ``"heartbeat"``

#### Defined in

[middleware/typesV2.ts:23961](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23961)

___

### IncreaseCustodyAllowance

• **IncreaseCustodyAllowance** = ``"increase_custody_allowance"``

#### Defined in

[middleware/typesV2.ts:23962](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23962)

___

### IncreaseCustodyAllowanceOf

• **IncreaseCustodyAllowanceOf** = ``"increase_custody_allowance_of"``

#### Defined in

[middleware/typesV2.ts:23963](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23963)

___

### IncreasePolyxLimit

• **IncreasePolyxLimit** = ``"increase_polyx_limit"``

#### Defined in

[middleware/typesV2.ts:23964](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23964)

___

### IncreaseValidatorCount

• **IncreaseValidatorCount** = ``"increase_validator_count"``

#### Defined in

[middleware/typesV2.ts:23965](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23965)

___

### InitiateCorporateAction

• **InitiateCorporateAction** = ``"initiate_corporate_action"``

#### Defined in

[middleware/typesV2.ts:23966](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23966)

___

### InitiateCorporateActionAndDistribute

• **InitiateCorporateActionAndDistribute** = ``"initiate_corporate_action_and_distribute"``

#### Defined in

[middleware/typesV2.ts:23967](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23967)

___

### Instantiate

• **Instantiate** = ``"instantiate"``

#### Defined in

[middleware/typesV2.ts:23968](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23968)

___

### InstantiateWithCode

• **InstantiateWithCode** = ``"instantiate_with_code"``

#### Defined in

[middleware/typesV2.ts:23969](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23969)

___

### InstantiateWithCodePerms

• **InstantiateWithCodePerms** = ``"instantiate_with_code_perms"``

#### Defined in

[middleware/typesV2.ts:23970](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23970)

___

### InstantiateWithHashPerms

• **InstantiateWithHashPerms** = ``"instantiate_with_hash_perms"``

#### Defined in

[middleware/typesV2.ts:23971](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23971)

___

### InvalidateCddClaims

• **InvalidateCddClaims** = ``"invalidate_cdd_claims"``

#### Defined in

[middleware/typesV2.ts:23972](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23972)

___

### Invest

• **Invest** = ``"invest"``

#### Defined in

[middleware/typesV2.ts:23973](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23973)

___

### IsIssuable

• **IsIssuable** = ``"is_issuable"``

#### Defined in

[middleware/typesV2.ts:23974](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23974)

___

### Issue

• **Issue** = ``"issue"``

#### Defined in

[middleware/typesV2.ts:23975](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23975)

___

### JoinIdentityAsIdentity

• **JoinIdentityAsIdentity** = ``"join_identity_as_identity"``

#### Defined in

[middleware/typesV2.ts:23976](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23976)

___

### JoinIdentityAsKey

• **JoinIdentityAsKey** = ``"join_identity_as_key"``

#### Defined in

[middleware/typesV2.ts:23977](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23977)

___

### KillPrefix

• **KillPrefix** = ``"kill_prefix"``

#### Defined in

[middleware/typesV2.ts:23978](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23978)

___

### KillProposal

• **KillProposal** = ``"kill_proposal"``

#### Defined in

[middleware/typesV2.ts:23979](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23979)

___

### KillStorage

• **KillStorage** = ``"kill_storage"``

#### Defined in

[middleware/typesV2.ts:23980](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23980)

___

### LaunchSto

• **LaunchSto** = ``"launch_sto"``

#### Defined in

[middleware/typesV2.ts:23981](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23981)

___

### LeaveIdentityAsIdentity

• **LeaveIdentityAsIdentity** = ``"leave_identity_as_identity"``

#### Defined in

[middleware/typesV2.ts:23982](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23982)

___

### LeaveIdentityAsKey

• **LeaveIdentityAsKey** = ``"leave_identity_as_key"``

#### Defined in

[middleware/typesV2.ts:23983](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23983)

___

### LegacySetPermissionToSigner

• **LegacySetPermissionToSigner** = ``"legacy_set_permission_to_signer"``

#### Defined in

[middleware/typesV2.ts:23984](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23984)

___

### LinkCaDoc

• **LinkCaDoc** = ``"link_ca_doc"``

#### Defined in

[middleware/typesV2.ts:23985](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23985)

___

### MakeDivisible

• **MakeDivisible** = ``"make_divisible"``

#### Defined in

[middleware/typesV2.ts:23986](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23986)

___

### MakeMultisigPrimary

• **MakeMultisigPrimary** = ``"make_multisig_primary"``

#### Defined in

[middleware/typesV2.ts:23987](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23987)

___

### MakeMultisigSecondary

• **MakeMultisigSecondary** = ``"make_multisig_secondary"``

#### Defined in

[middleware/typesV2.ts:23988](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23988)

___

### MakeMultisigSigner

• **MakeMultisigSigner** = ``"make_multisig_signer"``

#### Defined in

[middleware/typesV2.ts:23989](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23989)

___

### MockCddRegisterDid

• **MockCddRegisterDid** = ``"mock_cdd_register_did"``

#### Defined in

[middleware/typesV2.ts:23990](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23990)

___

### ModifyExemptionList

• **ModifyExemptionList** = ``"modify_exemption_list"``

#### Defined in

[middleware/typesV2.ts:23991](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23991)

___

### ModifyFundraiserWindow

• **ModifyFundraiserWindow** = ``"modify_fundraiser_window"``

#### Defined in

[middleware/typesV2.ts:23992](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23992)

___

### MovePortfolioFunds

• **MovePortfolioFunds** = ``"move_portfolio_funds"``

#### Defined in

[middleware/typesV2.ts:23993](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23993)

___

### New

• **New** = ``"new"``

#### Defined in

[middleware/typesV2.ts:23994](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23994)

___

### Nominate

• **Nominate** = ``"nominate"``

#### Defined in

[middleware/typesV2.ts:23995](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23995)

___

### NotePreimage

• **NotePreimage** = ``"note_preimage"``

#### Defined in

[middleware/typesV2.ts:23996](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23996)

___

### NoteStalled

• **NoteStalled** = ``"note_stalled"``

#### Defined in

[middleware/typesV2.ts:23997](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23997)

___

### OverrideReferendumEnactmentPeriod

• **OverrideReferendumEnactmentPeriod** = ``"override_referendum_enactment_period"``

#### Defined in

[middleware/typesV2.ts:23998](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23998)

___

### PauseAssetCompliance

• **PauseAssetCompliance** = ``"pause_asset_compliance"``

#### Defined in

[middleware/typesV2.ts:23999](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L23999)

___

### PauseAssetRules

• **PauseAssetRules** = ``"pause_asset_rules"``

#### Defined in

[middleware/typesV2.ts:24000](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24000)

___

### PauseSto

• **PauseSto** = ``"pause_sto"``

#### Defined in

[middleware/typesV2.ts:24001](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24001)

___

### PayoutStakers

• **PayoutStakers** = ``"payout_stakers"``

#### Defined in

[middleware/typesV2.ts:24002](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24002)

___

### PayoutStakersBySystem

• **PayoutStakersBySystem** = ``"payout_stakers_by_system"``

#### Defined in

[middleware/typesV2.ts:24003](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24003)

___

### PlaceholderLegacySetPermissionToSigner

• **PlaceholderLegacySetPermissionToSigner** = ``"placeholder_legacy_set_permission_to_signer"``

#### Defined in

[middleware/typesV2.ts:24004](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24004)

___

### PlanConfigChange

• **PlanConfigChange** = ``"plan_config_change"``

#### Defined in

[middleware/typesV2.ts:24005](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24005)

___

### Propose

• **Propose** = ``"propose"``

#### Defined in

[middleware/typesV2.ts:24006](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24006)

___

### ProposeBridgeTx

• **ProposeBridgeTx** = ``"propose_bridge_tx"``

#### Defined in

[middleware/typesV2.ts:24007](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24007)

___

### PruneProposal

• **PruneProposal** = ``"prune_proposal"``

#### Defined in

[middleware/typesV2.ts:24008](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24008)

___

### PurgeKeys

• **PurgeKeys** = ``"purge_keys"``

#### Defined in

[middleware/typesV2.ts:24009](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24009)

___

### PushBenefit

• **PushBenefit** = ``"push_benefit"``

#### Defined in

[middleware/typesV2.ts:24010](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24010)

___

### PutCode

• **PutCode** = ``"put_code"``

#### Defined in

[middleware/typesV2.ts:24011](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24011)

___

### QuitPortfolioCustody

• **QuitPortfolioCustody** = ``"quit_portfolio_custody"``

#### Defined in

[middleware/typesV2.ts:24012](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24012)

___

### ReapStash

• **ReapStash** = ``"reap_stash"``

#### Defined in

[middleware/typesV2.ts:24013](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24013)

___

### Rebond

• **Rebond** = ``"rebond"``

#### Defined in

[middleware/typesV2.ts:24014](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24014)

___

### Reclaim

• **Reclaim** = ``"reclaim"``

#### Defined in

[middleware/typesV2.ts:24015](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24015)

___

### Redeem

• **Redeem** = ``"redeem"``

#### Defined in

[middleware/typesV2.ts:24016](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24016)

___

### RedeemFrom

• **RedeemFrom** = ``"redeem_from"``

#### Defined in

[middleware/typesV2.ts:24017](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24017)

___

### RedeemFromPortfolio

• **RedeemFromPortfolio** = ``"redeem_from_portfolio"``

#### Defined in

[middleware/typesV2.ts:24018](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24018)

___

### RegisterAndSetLocalAssetMetadata

• **RegisterAndSetLocalAssetMetadata** = ``"register_and_set_local_asset_metadata"``

#### Defined in

[middleware/typesV2.ts:24019](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24019)

___

### RegisterAssetMetadataGlobalType

• **RegisterAssetMetadataGlobalType** = ``"register_asset_metadata_global_type"``

#### Defined in

[middleware/typesV2.ts:24020](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24020)

___

### RegisterAssetMetadataLocalType

• **RegisterAssetMetadataLocalType** = ``"register_asset_metadata_local_type"``

#### Defined in

[middleware/typesV2.ts:24021](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24021)

___

### RegisterCustomAssetType

• **RegisterCustomAssetType** = ``"register_custom_asset_type"``

#### Defined in

[middleware/typesV2.ts:24022](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24022)

___

### RegisterCustomClaimType

• **RegisterCustomClaimType** = ``"register_custom_claim_type"``

#### Defined in

[middleware/typesV2.ts:24023](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24023)

___

### RegisterDid

• **RegisterDid** = ``"register_did"``

#### Defined in

[middleware/typesV2.ts:24024](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24024)

___

### RegisterTicker

• **RegisterTicker** = ``"register_ticker"``

#### Defined in

[middleware/typesV2.ts:24025](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24025)

___

### Reimbursement

• **Reimbursement** = ``"reimbursement"``

#### Defined in

[middleware/typesV2.ts:24026](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24026)

___

### RejectAsIdentity

• **RejectAsIdentity** = ``"reject_as_identity"``

#### Defined in

[middleware/typesV2.ts:24027](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24027)

___

### RejectAsKey

• **RejectAsKey** = ``"reject_as_key"``

#### Defined in

[middleware/typesV2.ts:24028](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24028)

___

### RejectInstruction

• **RejectInstruction** = ``"reject_instruction"``

#### Defined in

[middleware/typesV2.ts:24029](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24029)

___

### RejectProposal

• **RejectProposal** = ``"reject_proposal"``

#### Defined in

[middleware/typesV2.ts:24030](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24030)

___

### RejectReferendum

• **RejectReferendum** = ``"reject_referendum"``

#### Defined in

[middleware/typesV2.ts:24031](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24031)

___

### RelayTx

• **RelayTx** = ``"relay_tx"``

#### Defined in

[middleware/typesV2.ts:24032](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24032)

___

### Remark

• **Remark** = ``"remark"``

#### Defined in

[middleware/typesV2.ts:24033](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24033)

___

### RemarkWithEvent

• **RemarkWithEvent** = ``"remark_with_event"``

#### Defined in

[middleware/typesV2.ts:24034](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24034)

___

### RemoveActiveRule

• **RemoveActiveRule** = ``"remove_active_rule"``

#### Defined in

[middleware/typesV2.ts:24035](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24035)

___

### RemoveAgent

• **RemoveAgent** = ``"remove_agent"``

#### Defined in

[middleware/typesV2.ts:24036](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24036)

___

### RemoveAuthorization

• **RemoveAuthorization** = ``"remove_authorization"``

#### Defined in

[middleware/typesV2.ts:24037](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24037)

___

### RemoveBallot

• **RemoveBallot** = ``"remove_ballot"``

#### Defined in

[middleware/typesV2.ts:24038](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24038)

___

### RemoveCa

• **RemoveCa** = ``"remove_ca"``

#### Defined in

[middleware/typesV2.ts:24039](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24039)

___

### RemoveCode

• **RemoveCode** = ``"remove_code"``

#### Defined in

[middleware/typesV2.ts:24040](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24040)

___

### RemoveComplianceRequirement

• **RemoveComplianceRequirement** = ``"remove_compliance_requirement"``

#### Defined in

[middleware/typesV2.ts:24041](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24041)

___

### RemoveDefaultTrustedClaimIssuer

• **RemoveDefaultTrustedClaimIssuer** = ``"remove_default_trusted_claim_issuer"``

#### Defined in

[middleware/typesV2.ts:24042](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24042)

___

### RemoveDistribution

• **RemoveDistribution** = ``"remove_distribution"``

#### Defined in

[middleware/typesV2.ts:24043](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24043)

___

### RemoveDocuments

• **RemoveDocuments** = ``"remove_documents"``

#### Defined in

[middleware/typesV2.ts:24044](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24044)

___

### RemoveExemptedEntities

• **RemoveExemptedEntities** = ``"remove_exempted_entities"``

#### Defined in

[middleware/typesV2.ts:24045](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24045)

___

### RemoveFreezeAdmin

• **RemoveFreezeAdmin** = ``"remove_freeze_admin"``

#### Defined in

[middleware/typesV2.ts:24046](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24046)

___

### RemoveMember

• **RemoveMember** = ``"remove_member"``

#### Defined in

[middleware/typesV2.ts:24047](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24047)

___

### RemoveMultisigSigner

• **RemoveMultisigSigner** = ``"remove_multisig_signer"``

#### Defined in

[middleware/typesV2.ts:24048](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24048)

___

### RemoveMultisigSignersViaCreator

• **RemoveMultisigSignersViaCreator** = ``"remove_multisig_signers_via_creator"``

#### Defined in

[middleware/typesV2.ts:24049](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24049)

___

### RemovePayingKey

• **RemovePayingKey** = ``"remove_paying_key"``

#### Defined in

[middleware/typesV2.ts:24050](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24050)

___

### RemovePermissionedValidator

• **RemovePermissionedValidator** = ``"remove_permissioned_validator"``

#### Defined in

[middleware/typesV2.ts:24051](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24051)

___

### RemovePrimaryIssuanceAgent

• **RemovePrimaryIssuanceAgent** = ``"remove_primary_issuance_agent"``

#### Defined in

[middleware/typesV2.ts:24052](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24052)

___

### RemoveSchedule

• **RemoveSchedule** = ``"remove_schedule"``

#### Defined in

[middleware/typesV2.ts:24053](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24053)

___

### RemoveSecondaryKeys

• **RemoveSecondaryKeys** = ``"remove_secondary_keys"``

#### Defined in

[middleware/typesV2.ts:24054](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24054)

___

### RemoveSecondaryKeysOld

• **RemoveSecondaryKeysOld** = ``"remove_secondary_keys_old"``

#### Defined in

[middleware/typesV2.ts:24055](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24055)

___

### RemoveSigningKeys

• **RemoveSigningKeys** = ``"remove_signing_keys"``

#### Defined in

[middleware/typesV2.ts:24056](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24056)

___

### RemoveSmartExtension

• **RemoveSmartExtension** = ``"remove_smart_extension"``

#### Defined in

[middleware/typesV2.ts:24057](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24057)

___

### RemoveTransferManager

• **RemoveTransferManager** = ``"remove_transfer_manager"``

#### Defined in

[middleware/typesV2.ts:24058](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24058)

___

### RemoveTxs

• **RemoveTxs** = ``"remove_txs"``

#### Defined in

[middleware/typesV2.ts:24059](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24059)

___

### RenameAsset

• **RenameAsset** = ``"rename_asset"``

#### Defined in

[middleware/typesV2.ts:24060](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24060)

___

### RenamePortfolio

• **RenamePortfolio** = ``"rename_portfolio"``

#### Defined in

[middleware/typesV2.ts:24061](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24061)

___

### ReplaceAssetCompliance

• **ReplaceAssetCompliance** = ``"replace_asset_compliance"``

#### Defined in

[middleware/typesV2.ts:24062](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24062)

___

### ReplaceAssetRules

• **ReplaceAssetRules** = ``"replace_asset_rules"``

#### Defined in

[middleware/typesV2.ts:24063](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24063)

___

### ReportEquivocation

• **ReportEquivocation** = ``"report_equivocation"``

#### Defined in

[middleware/typesV2.ts:24064](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24064)

___

### ReportEquivocationUnsigned

• **ReportEquivocationUnsigned** = ``"report_equivocation_unsigned"``

#### Defined in

[middleware/typesV2.ts:24065](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24065)

___

### RequestPreimage

• **RequestPreimage** = ``"request_preimage"``

#### Defined in

[middleware/typesV2.ts:24066](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24066)

___

### RescheduleExecution

• **RescheduleExecution** = ``"reschedule_execution"``

#### Defined in

[middleware/typesV2.ts:24067](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24067)

___

### RescheduleInstruction

• **RescheduleInstruction** = ``"reschedule_instruction"``

#### Defined in

[middleware/typesV2.ts:24068](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24068)

___

### ReserveClassicTicker

• **ReserveClassicTicker** = ``"reserve_classic_ticker"``

#### Defined in

[middleware/typesV2.ts:24069](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24069)

___

### ResetActiveRules

• **ResetActiveRules** = ``"reset_active_rules"``

#### Defined in

[middleware/typesV2.ts:24070](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24070)

___

### ResetAssetCompliance

• **ResetAssetCompliance** = ``"reset_asset_compliance"``

#### Defined in

[middleware/typesV2.ts:24071](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24071)

___

### ResetCaa

• **ResetCaa** = ``"reset_caa"``

#### Defined in

[middleware/typesV2.ts:24072](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24072)

___

### ResetMembers

• **ResetMembers** = ``"reset_members"``

#### Defined in

[middleware/typesV2.ts:24073](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24073)

___

### ResumeAssetCompliance

• **ResumeAssetCompliance** = ``"resume_asset_compliance"``

#### Defined in

[middleware/typesV2.ts:24074](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24074)

___

### ResumeAssetRules

• **ResumeAssetRules** = ``"resume_asset_rules"``

#### Defined in

[middleware/typesV2.ts:24075](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24075)

___

### RevokeClaim

• **RevokeClaim** = ``"revoke_claim"``

#### Defined in

[middleware/typesV2.ts:24076](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24076)

___

### RevokeClaimByIndex

• **RevokeClaimByIndex** = ``"revoke_claim_by_index"``

#### Defined in

[middleware/typesV2.ts:24077](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24077)

___

### RevokeOffchainAuthorization

• **RevokeOffchainAuthorization** = ``"revoke_offchain_authorization"``

#### Defined in

[middleware/typesV2.ts:24078](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24078)

___

### RotatePrimaryKeyToSecondary

• **RotatePrimaryKeyToSecondary** = ``"rotate_primary_key_to_secondary"``

#### Defined in

[middleware/typesV2.ts:24079](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24079)

___

### ScaleValidatorCount

• **ScaleValidatorCount** = ``"scale_validator_count"``

#### Defined in

[middleware/typesV2.ts:24080](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24080)

___

### Schedule

• **Schedule** = ``"schedule"``

#### Defined in

[middleware/typesV2.ts:24081](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24081)

___

### ScheduleAfter

• **ScheduleAfter** = ``"schedule_after"``

#### Defined in

[middleware/typesV2.ts:24082](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24082)

___

### ScheduleNamed

• **ScheduleNamed** = ``"schedule_named"``

#### Defined in

[middleware/typesV2.ts:24083](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24083)

___

### ScheduleNamedAfter

• **ScheduleNamedAfter** = ``"schedule_named_after"``

#### Defined in

[middleware/typesV2.ts:24084](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24084)

___

### Set

• **Set** = ``"set"``

#### Defined in

[middleware/typesV2.ts:24085](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24085)

___

### SetActiveAssetStats

• **SetActiveAssetStats** = ``"set_active_asset_stats"``

#### Defined in

[middleware/typesV2.ts:24086](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24086)

___

### SetActiveMembersLimit

• **SetActiveMembersLimit** = ``"set_active_members_limit"``

#### Defined in

[middleware/typesV2.ts:24087](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24087)

___

### SetActivePipLimit

• **SetActivePipLimit** = ``"set_active_pip_limit"``

#### Defined in

[middleware/typesV2.ts:24088](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24088)

___

### SetAssetMetadata

• **SetAssetMetadata** = ``"set_asset_metadata"``

#### Defined in

[middleware/typesV2.ts:24089](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24089)

___

### SetAssetMetadataDetails

• **SetAssetMetadataDetails** = ``"set_asset_metadata_details"``

#### Defined in

[middleware/typesV2.ts:24090](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24090)

___

### SetAssetTransferCompliance

• **SetAssetTransferCompliance** = ``"set_asset_transfer_compliance"``

#### Defined in

[middleware/typesV2.ts:24091](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24091)

___

### SetBalance

• **SetBalance** = ``"set_balance"``

#### Defined in

[middleware/typesV2.ts:24092](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24092)

___

### SetChangesTrieConfig

• **SetChangesTrieConfig** = ``"set_changes_trie_config"``

#### Defined in

[middleware/typesV2.ts:24093](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24093)

___

### SetCode

• **SetCode** = ``"set_code"``

#### Defined in

[middleware/typesV2.ts:24094](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24094)

___

### SetCodeWithoutChecks

• **SetCodeWithoutChecks** = ``"set_code_without_checks"``

#### Defined in

[middleware/typesV2.ts:24095](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24095)

___

### SetCommissionCap

• **SetCommissionCap** = ``"set_commission_cap"``

#### Defined in

[middleware/typesV2.ts:24096](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24096)

___

### SetController

• **SetController** = ``"set_controller"``

#### Defined in

[middleware/typesV2.ts:24097](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24097)

___

### SetDefaultEnactmentPeriod

• **SetDefaultEnactmentPeriod** = ``"set_default_enactment_period"``

#### Defined in

[middleware/typesV2.ts:24098](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24098)

___

### SetDefaultTargets

• **SetDefaultTargets** = ``"set_default_targets"``

#### Defined in

[middleware/typesV2.ts:24099](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24099)

___

### SetDefaultWithholdingTax

• **SetDefaultWithholdingTax** = ``"set_default_withholding_tax"``

#### Defined in

[middleware/typesV2.ts:24100](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24100)

___

### SetDidWithholdingTax

• **SetDidWithholdingTax** = ``"set_did_withholding_tax"``

#### Defined in

[middleware/typesV2.ts:24101](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24101)

___

### SetEntitiesExempt

• **SetEntitiesExempt** = ``"set_entities_exempt"``

#### Defined in

[middleware/typesV2.ts:24102](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24102)

___

### SetExpiresAfter

• **SetExpiresAfter** = ``"set_expires_after"``

#### Defined in

[middleware/typesV2.ts:24103](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24103)

___

### SetFundingRound

• **SetFundingRound** = ``"set_funding_round"``

#### Defined in

[middleware/typesV2.ts:24104](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24104)

___

### SetGlobalCommission

• **SetGlobalCommission** = ``"set_global_commission"``

#### Defined in

[middleware/typesV2.ts:24105](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24105)

___

### SetGroupPermissions

• **SetGroupPermissions** = ``"set_group_permissions"``

#### Defined in

[middleware/typesV2.ts:24106](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24106)

___

### SetHeapPages

• **SetHeapPages** = ``"set_heap_pages"``

#### Defined in

[middleware/typesV2.ts:24107](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24107)

___

### SetHistoryDepth

• **SetHistoryDepth** = ``"set_history_depth"``

#### Defined in

[middleware/typesV2.ts:24108](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24108)

___

### SetInvulnerables

• **SetInvulnerables** = ``"set_invulnerables"``

#### Defined in

[middleware/typesV2.ts:24109](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24109)

___

### SetItnRewardStatus

• **SetItnRewardStatus** = ``"set_itn_reward_status"``

#### Defined in

[middleware/typesV2.ts:24110](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24110)

___

### SetKey

• **SetKey** = ``"set_key"``

#### Defined in

[middleware/typesV2.ts:24111](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24111)

___

### SetKeys

• **SetKeys** = ``"set_keys"``

#### Defined in

[middleware/typesV2.ts:24112](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24112)

___

### SetMasterKey

• **SetMasterKey** = ``"set_master_key"``

#### Defined in

[middleware/typesV2.ts:24113](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24113)

___

### SetMaxDetailsLength

• **SetMaxDetailsLength** = ``"set_max_details_length"``

#### Defined in

[middleware/typesV2.ts:24114](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24114)

___

### SetMaxPipSkipCount

• **SetMaxPipSkipCount** = ``"set_max_pip_skip_count"``

#### Defined in

[middleware/typesV2.ts:24115](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24115)

___

### SetMinBondThreshold

• **SetMinBondThreshold** = ``"set_min_bond_threshold"``

#### Defined in

[middleware/typesV2.ts:24116](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24116)

___

### SetMinProposalDeposit

• **SetMinProposalDeposit** = ``"set_min_proposal_deposit"``

#### Defined in

[middleware/typesV2.ts:24117](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24117)

___

### SetPayee

• **SetPayee** = ``"set_payee"``

#### Defined in

[middleware/typesV2.ts:24118](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24118)

___

### SetPayingKey

• **SetPayingKey** = ``"set_paying_key"``

#### Defined in

[middleware/typesV2.ts:24119](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24119)

___

### SetPendingPipExpiry

• **SetPendingPipExpiry** = ``"set_pending_pip_expiry"``

#### Defined in

[middleware/typesV2.ts:24120](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24120)

___

### SetPermissionToSigner

• **SetPermissionToSigner** = ``"set_permission_to_signer"``

#### Defined in

[middleware/typesV2.ts:24121](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24121)

___

### SetPrimaryKey

• **SetPrimaryKey** = ``"set_primary_key"``

#### Defined in

[middleware/typesV2.ts:24122](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24122)

___

### SetProposalCoolOffPeriod

• **SetProposalCoolOffPeriod** = ``"set_proposal_cool_off_period"``

#### Defined in

[middleware/typesV2.ts:24123](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24123)

___

### SetProposalDuration

• **SetProposalDuration** = ``"set_proposal_duration"``

#### Defined in

[middleware/typesV2.ts:24124](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24124)

___

### SetPruneHistoricalPips

• **SetPruneHistoricalPips** = ``"set_prune_historical_pips"``

#### Defined in

[middleware/typesV2.ts:24125](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24125)

___

### SetReleaseCoordinator

• **SetReleaseCoordinator** = ``"set_release_coordinator"``

#### Defined in

[middleware/typesV2.ts:24126](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24126)

___

### SetSchedulesMaxComplexity

• **SetSchedulesMaxComplexity** = ``"set_schedules_max_complexity"``

#### Defined in

[middleware/typesV2.ts:24127](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24127)

___

### SetSecondaryKeyPermissions

• **SetSecondaryKeyPermissions** = ``"set_secondary_key_permissions"``

#### Defined in

[middleware/typesV2.ts:24128](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24128)

___

### SetStorage

• **SetStorage** = ``"set_storage"``

#### Defined in

[middleware/typesV2.ts:24129](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24129)

___

### SetUncles

• **SetUncles** = ``"set_uncles"``

#### Defined in

[middleware/typesV2.ts:24130](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24130)

___

### SetValidatorCount

• **SetValidatorCount** = ``"set_validator_count"``

#### Defined in

[middleware/typesV2.ts:24131](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24131)

___

### SetVenueFiltering

• **SetVenueFiltering** = ``"set_venue_filtering"``

#### Defined in

[middleware/typesV2.ts:24132](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24132)

___

### SetVoteThreshold

• **SetVoteThreshold** = ``"set_vote_threshold"``

#### Defined in

[middleware/typesV2.ts:24133](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24133)

___

### Snapshot

• **Snapshot** = ``"snapshot"``

#### Defined in

[middleware/typesV2.ts:24134](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24134)

___

### Stop

• **Stop** = ``"stop"``

#### Defined in

[middleware/typesV2.ts:24135](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24135)

___

### SubmitElectionSolution

• **SubmitElectionSolution** = ``"submit_election_solution"``

#### Defined in

[middleware/typesV2.ts:24136](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24136)

___

### SubmitElectionSolutionUnsigned

• **SubmitElectionSolutionUnsigned** = ``"submit_election_solution_unsigned"``

#### Defined in

[middleware/typesV2.ts:24137](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24137)

___

### Sudo

• **Sudo** = ``"sudo"``

#### Defined in

[middleware/typesV2.ts:24138](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24138)

___

### SudoAs

• **SudoAs** = ``"sudo_as"``

#### Defined in

[middleware/typesV2.ts:24139](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24139)

___

### SudoUncheckedWeight

• **SudoUncheckedWeight** = ``"sudo_unchecked_weight"``

#### Defined in

[middleware/typesV2.ts:24140](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24140)

___

### SwapMember

• **SwapMember** = ``"swap_member"``

#### Defined in

[middleware/typesV2.ts:24141](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24141)

___

### Transfer

• **Transfer** = ``"transfer"``

#### Defined in

[middleware/typesV2.ts:24142](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24142)

___

### TransferWithMemo

• **TransferWithMemo** = ``"transfer_with_memo"``

#### Defined in

[middleware/typesV2.ts:24143](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24143)

___

### Unbond

• **Unbond** = ``"unbond"``

#### Defined in

[middleware/typesV2.ts:24144](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24144)

___

### UnclaimReceipt

• **UnclaimReceipt** = ``"unclaim_receipt"``

#### Defined in

[middleware/typesV2.ts:24145](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24145)

___

### Unfreeze

• **Unfreeze** = ``"unfreeze"``

#### Defined in

[middleware/typesV2.ts:24146](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24146)

___

### UnfreezeFundraiser

• **UnfreezeFundraiser** = ``"unfreeze_fundraiser"``

#### Defined in

[middleware/typesV2.ts:24147](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24147)

___

### UnfreezeSecondaryKeys

• **UnfreezeSecondaryKeys** = ``"unfreeze_secondary_keys"``

#### Defined in

[middleware/typesV2.ts:24148](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24148)

___

### UnfreezeTxs

• **UnfreezeTxs** = ``"unfreeze_txs"``

#### Defined in

[middleware/typesV2.ts:24149](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24149)

___

### UnnotePreimage

• **UnnotePreimage** = ``"unnote_preimage"``

#### Defined in

[middleware/typesV2.ts:24150](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24150)

___

### UnrequestPreimage

• **UnrequestPreimage** = ``"unrequest_preimage"``

#### Defined in

[middleware/typesV2.ts:24151](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24151)

___

### UpdateAssetType

• **UpdateAssetType** = ``"update_asset_type"``

#### Defined in

[middleware/typesV2.ts:24152](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24152)

___

### UpdateCallRuntimeWhitelist

• **UpdateCallRuntimeWhitelist** = ``"update_call_runtime_whitelist"``

#### Defined in

[middleware/typesV2.ts:24153](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24153)

___

### UpdateIdentifiers

• **UpdateIdentifiers** = ``"update_identifiers"``

#### Defined in

[middleware/typesV2.ts:24154](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24154)

___

### UpdatePermissionedValidatorIntendedCount

• **UpdatePermissionedValidatorIntendedCount** = ``"update_permissioned_validator_intended_count"``

#### Defined in

[middleware/typesV2.ts:24155](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24155)

___

### UpdatePolyxLimit

• **UpdatePolyxLimit** = ``"update_polyx_limit"``

#### Defined in

[middleware/typesV2.ts:24156](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24156)

___

### UpdateVenueDetails

• **UpdateVenueDetails** = ``"update_venue_details"``

#### Defined in

[middleware/typesV2.ts:24157](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24157)

___

### UpdateVenueSigners

• **UpdateVenueSigners** = ``"update_venue_signers"``

#### Defined in

[middleware/typesV2.ts:24158](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24158)

___

### UpdateVenueType

• **UpdateVenueType** = ``"update_venue_type"``

#### Defined in

[middleware/typesV2.ts:24159](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24159)

___

### UploadCode

• **UploadCode** = ``"upload_code"``

#### Defined in

[middleware/typesV2.ts:24160](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24160)

___

### Validate

• **Validate** = ``"validate"``

#### Defined in

[middleware/typesV2.ts:24161](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24161)

___

### ValidateCddExpiryNominators

• **ValidateCddExpiryNominators** = ``"validate_cdd_expiry_nominators"``

#### Defined in

[middleware/typesV2.ts:24162](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24162)

___

### Vote

• **Vote** = ``"vote"``

#### Defined in

[middleware/typesV2.ts:24163](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24163)

___

### VoteOrPropose

• **VoteOrPropose** = ``"vote_or_propose"``

#### Defined in

[middleware/typesV2.ts:24164](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24164)

___

### WithdrawAffirmation

• **WithdrawAffirmation** = ``"withdraw_affirmation"``

#### Defined in

[middleware/typesV2.ts:24165](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24165)

___

### WithdrawUnbonded

• **WithdrawUnbonded** = ``"withdraw_unbonded"``

#### Defined in

[middleware/typesV2.ts:24166](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24166)
