sdk-docs_versioned_docs/version-22.0.x/enums/Types/CallIdEnum/CallIdEnum.md
---
id: "CallIdEnum"
title: "Enumeration: CallIdEnum"
sidebar_label: "CallIdEnum"
---

[types](../../../modules/Types/Types.md).CallIdEnum

**`Enum Name`**

 CallIdEnum
 Represents all known chain extrinsics

## Enumeration Members

### Abdicate

• **Abdicate** = ``"abdicate"``

#### Defined in

[middleware/types.ts:28835](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28835)

___

### AbdicateMembership

• **AbdicateMembership** = ``"abdicate_membership"``

#### Defined in

[middleware/types.ts:28836](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28836)

___

### AcceptAssetOwnershipTransfer

• **AcceptAssetOwnershipTransfer** = ``"accept_asset_ownership_transfer"``

#### Defined in

[middleware/types.ts:28837](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28837)

___

### AcceptAuthorization

• **AcceptAuthorization** = ``"accept_authorization"``

#### Defined in

[middleware/types.ts:28838](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28838)

___

### AcceptBecomeAgent

• **AcceptBecomeAgent** = ``"accept_become_agent"``

#### Defined in

[middleware/types.ts:28839](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28839)

___

### AcceptMasterKey

• **AcceptMasterKey** = ``"accept_master_key"``

#### Defined in

[middleware/types.ts:28840](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28840)

___

### AcceptMultisigSignerAsIdentity

• **AcceptMultisigSignerAsIdentity** = ``"accept_multisig_signer_as_identity"``

#### Defined in

[middleware/types.ts:28841](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28841)

___

### AcceptMultisigSignerAsKey

• **AcceptMultisigSignerAsKey** = ``"accept_multisig_signer_as_key"``

#### Defined in

[middleware/types.ts:28842](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28842)

___

### AcceptPayingKey

• **AcceptPayingKey** = ``"accept_paying_key"``

#### Defined in

[middleware/types.ts:28843](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28843)

___

### AcceptPortfolioCustody

• **AcceptPortfolioCustody** = ``"accept_portfolio_custody"``

#### Defined in

[middleware/types.ts:28844](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28844)

___

### AcceptPrimaryIssuanceAgentTransfer

• **AcceptPrimaryIssuanceAgentTransfer** = ``"accept_primary_issuance_agent_transfer"``

#### Defined in

[middleware/types.ts:28845](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28845)

___

### AcceptPrimaryKey

• **AcceptPrimaryKey** = ``"accept_primary_key"``

#### Defined in

[middleware/types.ts:28846](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28846)

___

### AcceptTickerTransfer

• **AcceptTickerTransfer** = ``"accept_ticker_transfer"``

#### Defined in

[middleware/types.ts:28847](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28847)

___

### AddActiveRule

• **AddActiveRule** = ``"add_active_rule"``

#### Defined in

[middleware/types.ts:28848](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28848)

___

### AddAndAffirmInstruction

• **AddAndAffirmInstruction** = ``"add_and_affirm_instruction"``

#### Defined in

[middleware/types.ts:28849](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28849)

___

### AddAndAffirmInstructionWithMemo

• **AddAndAffirmInstructionWithMemo** = ``"add_and_affirm_instruction_with_memo"``

#### Defined in

[middleware/types.ts:28850](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28850)

___

### AddAndAffirmInstructionWithMemoV2

• **AddAndAffirmInstructionWithMemoV2** = ``"add_and_affirm_instruction_with_memo_v2"``

#### Defined in

[middleware/types.ts:28851](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28851)

___

### AddAndAuthorizeInstruction

• **AddAndAuthorizeInstruction** = ``"add_and_authorize_instruction"``

#### Defined in

[middleware/types.ts:28852](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28852)

___

### AddAuthorization

• **AddAuthorization** = ``"add_authorization"``

#### Defined in

[middleware/types.ts:28853](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28853)

___

### AddBallot

• **AddBallot** = ``"add_ballot"``

#### Defined in

[middleware/types.ts:28854](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28854)

___

### AddClaim

• **AddClaim** = ``"add_claim"``

#### Defined in

[middleware/types.ts:28855](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28855)

___

### AddComplianceRequirement

• **AddComplianceRequirement** = ``"add_compliance_requirement"``

#### Defined in

[middleware/types.ts:28856](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28856)

___

### AddDefaultTrustedClaimIssuer

• **AddDefaultTrustedClaimIssuer** = ``"add_default_trusted_claim_issuer"``

#### Defined in

[middleware/types.ts:28857](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28857)

___

### AddDocuments

• **AddDocuments** = ``"add_documents"``

#### Defined in

[middleware/types.ts:28858](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28858)

___

### AddExemptedEntities

• **AddExemptedEntities** = ``"add_exempted_entities"``

#### Defined in

[middleware/types.ts:28859](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28859)

___

### AddExtension

• **AddExtension** = ``"add_extension"``

#### Defined in

[middleware/types.ts:28860](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28860)

___

### AddFreezeAdmin

• **AddFreezeAdmin** = ``"add_freeze_admin"``

#### Defined in

[middleware/types.ts:28861](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28861)

___

### AddInstruction

• **AddInstruction** = ``"add_instruction"``

#### Defined in

[middleware/types.ts:28862](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28862)

___

### AddInstructionWithMemo

• **AddInstructionWithMemo** = ``"add_instruction_with_memo"``

#### Defined in

[middleware/types.ts:28863](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28863)

___

### AddInstructionWithMemoV2

• **AddInstructionWithMemoV2** = ``"add_instruction_with_memo_v2"``

#### Defined in

[middleware/types.ts:28864](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28864)

___

### AddInvestorUniquenessClaim

• **AddInvestorUniquenessClaim** = ``"add_investor_uniqueness_claim"``

#### Defined in

[middleware/types.ts:28865](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28865)

___

### AddInvestorUniquenessClaimV2

• **AddInvestorUniquenessClaimV2** = ``"add_investor_uniqueness_claim_v2"``

#### Defined in

[middleware/types.ts:28866](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28866)

___

### AddMember

• **AddMember** = ``"add_member"``

#### Defined in

[middleware/types.ts:28867](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28867)

___

### AddMultisigSigner

• **AddMultisigSigner** = ``"add_multisig_signer"``

#### Defined in

[middleware/types.ts:28868](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28868)

___

### AddMultisigSignersViaCreator

• **AddMultisigSignersViaCreator** = ``"add_multisig_signers_via_creator"``

#### Defined in

[middleware/types.ts:28869](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28869)

___

### AddPermissionedValidator

• **AddPermissionedValidator** = ``"add_permissioned_validator"``

#### Defined in

[middleware/types.ts:28870](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28870)

___

### AddRangeProof

• **AddRangeProof** = ``"add_range_proof"``

#### Defined in

[middleware/types.ts:28871](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28871)

___

### AddSecondaryKeysWithAuthorization

• **AddSecondaryKeysWithAuthorization** = ``"add_secondary_keys_with_authorization"``

#### Defined in

[middleware/types.ts:28872](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28872)

___

### AddSecondaryKeysWithAuthorizationOld

• **AddSecondaryKeysWithAuthorizationOld** = ``"add_secondary_keys_with_authorization_old"``

#### Defined in

[middleware/types.ts:28873](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28873)

___

### AddTransferManager

• **AddTransferManager** = ``"add_transfer_manager"``

#### Defined in

[middleware/types.ts:28874](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28874)

___

### AddVerifyRangeProof

• **AddVerifyRangeProof** = ``"add_verify_range_proof"``

#### Defined in

[middleware/types.ts:28875](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28875)

___

### AffirmInstruction

• **AffirmInstruction** = ``"affirm_instruction"``

#### Defined in

[middleware/types.ts:28876](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28876)

___

### AffirmInstructionV2

• **AffirmInstructionV2** = ``"affirm_instruction_v2"``

#### Defined in

[middleware/types.ts:28877](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28877)

___

### AffirmWithReceipts

• **AffirmWithReceipts** = ``"affirm_with_receipts"``

#### Defined in

[middleware/types.ts:28878](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28878)

___

### AllowVenues

• **AllowVenues** = ``"allow_venues"``

#### Defined in

[middleware/types.ts:28879](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28879)

___

### AmendProposal

• **AmendProposal** = ``"amend_proposal"``

#### Defined in

[middleware/types.ts:28880](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28880)

___

### Approve

• **Approve** = ``"approve"``

#### Defined in

[middleware/types.ts:28881](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28881)

___

### ApproveAsIdentity

• **ApproveAsIdentity** = ``"approve_as_identity"``

#### Defined in

[middleware/types.ts:28882](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28882)

___

### ApproveAsKey

• **ApproveAsKey** = ``"approve_as_key"``

#### Defined in

[middleware/types.ts:28883](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28883)

___

### ApproveCommitteeProposal

• **ApproveCommitteeProposal** = ``"approve_committee_proposal"``

#### Defined in

[middleware/types.ts:28884](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28884)

___

### ArchiveExtension

• **ArchiveExtension** = ``"archive_extension"``

#### Defined in

[middleware/types.ts:28885](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28885)

___

### AttachBallot

• **AttachBallot** = ``"attach_ballot"``

#### Defined in

[middleware/types.ts:28886](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28886)

___

### AuthorizeInstruction

• **AuthorizeInstruction** = ``"authorize_instruction"``

#### Defined in

[middleware/types.ts:28887](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28887)

___

### AuthorizeWithReceipts

• **AuthorizeWithReceipts** = ``"authorize_with_receipts"``

#### Defined in

[middleware/types.ts:28888](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28888)

___

### Batch

• **Batch** = ``"batch"``

#### Defined in

[middleware/types.ts:28889](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28889)

___

### BatchAcceptAuthorization

• **BatchAcceptAuthorization** = ``"batch_accept_authorization"``

#### Defined in

[middleware/types.ts:28890](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28890)

___

### BatchAddAuthorization

• **BatchAddAuthorization** = ``"batch_add_authorization"``

#### Defined in

[middleware/types.ts:28891](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28891)

___

### BatchAddClaim

• **BatchAddClaim** = ``"batch_add_claim"``

#### Defined in

[middleware/types.ts:28892](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28892)

___

### BatchAddDefaultTrustedClaimIssuer

• **BatchAddDefaultTrustedClaimIssuer** = ``"batch_add_default_trusted_claim_issuer"``

#### Defined in

[middleware/types.ts:28893](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28893)

___

### BatchAddDocument

• **BatchAddDocument** = ``"batch_add_document"``

#### Defined in

[middleware/types.ts:28894](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28894)

___

### BatchAddSecondaryKeyWithAuthorization

• **BatchAddSecondaryKeyWithAuthorization** = ``"batch_add_secondary_key_with_authorization"``

#### Defined in

[middleware/types.ts:28895](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28895)

___

### BatchAddSigningKeyWithAuthorization

• **BatchAddSigningKeyWithAuthorization** = ``"batch_add_signing_key_with_authorization"``

#### Defined in

[middleware/types.ts:28896](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28896)

___

### BatchAll

• **BatchAll** = ``"batch_all"``

#### Defined in

[middleware/types.ts:28897](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28897)

___

### BatchAtomic

• **BatchAtomic** = ``"batch_atomic"``

#### Defined in

[middleware/types.ts:28898](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28898)

___

### BatchChangeAssetRule

• **BatchChangeAssetRule** = ``"batch_change_asset_rule"``

#### Defined in

[middleware/types.ts:28899](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28899)

___

### BatchChangeComplianceRequirement

• **BatchChangeComplianceRequirement** = ``"batch_change_compliance_requirement"``

#### Defined in

[middleware/types.ts:28900](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28900)

___

### BatchForceHandleBridgeTx

• **BatchForceHandleBridgeTx** = ``"batch_force_handle_bridge_tx"``

#### Defined in

[middleware/types.ts:28901](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28901)

___

### BatchFreezeTx

• **BatchFreezeTx** = ``"batch_freeze_tx"``

#### Defined in

[middleware/types.ts:28902](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28902)

___

### BatchHandleBridgeTx

• **BatchHandleBridgeTx** = ``"batch_handle_bridge_tx"``

#### Defined in

[middleware/types.ts:28903](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28903)

___

### BatchIssue

• **BatchIssue** = ``"batch_issue"``

#### Defined in

[middleware/types.ts:28904](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28904)

___

### BatchOld

• **BatchOld** = ``"batch_old"``

#### Defined in

[middleware/types.ts:28905](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28905)

___

### BatchOptimistic

• **BatchOptimistic** = ``"batch_optimistic"``

#### Defined in

[middleware/types.ts:28906](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28906)

___

### BatchProposeBridgeTx

• **BatchProposeBridgeTx** = ``"batch_propose_bridge_tx"``

#### Defined in

[middleware/types.ts:28907](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28907)

___

### BatchRemoveAuthorization

• **BatchRemoveAuthorization** = ``"batch_remove_authorization"``

#### Defined in

[middleware/types.ts:28908](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28908)

___

### BatchRemoveDefaultTrustedClaimIssuer

• **BatchRemoveDefaultTrustedClaimIssuer** = ``"batch_remove_default_trusted_claim_issuer"``

#### Defined in

[middleware/types.ts:28909](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28909)

___

### BatchRemoveDocument

• **BatchRemoveDocument** = ``"batch_remove_document"``

#### Defined in

[middleware/types.ts:28910](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28910)

___

### BatchRevokeClaim

• **BatchRevokeClaim** = ``"batch_revoke_claim"``

#### Defined in

[middleware/types.ts:28911](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28911)

___

### BatchUnfreezeTx

• **BatchUnfreezeTx** = ``"batch_unfreeze_tx"``

#### Defined in

[middleware/types.ts:28912](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28912)

___

### BatchUpdateAssetStats

• **BatchUpdateAssetStats** = ``"batch_update_asset_stats"``

#### Defined in

[middleware/types.ts:28913](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28913)

___

### Bond

• **Bond** = ``"bond"``

#### Defined in

[middleware/types.ts:28914](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28914)

___

### BondAdditionalDeposit

• **BondAdditionalDeposit** = ``"bond_additional_deposit"``

#### Defined in

[middleware/types.ts:28915](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28915)

___

### BondExtra

• **BondExtra** = ``"bond_extra"``

#### Defined in

[middleware/types.ts:28916](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28916)

___

### BurnAccountBalance

• **BurnAccountBalance** = ``"burn_account_balance"``

#### Defined in

[middleware/types.ts:28917](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28917)

___

### BuyTokens

• **BuyTokens** = ``"buy_tokens"``

#### Defined in

[middleware/types.ts:28918](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28918)

___

### Call

• **Call** = ``"call"``

#### Defined in

[middleware/types.ts:28919](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28919)

___

### CallOldWeight

• **CallOldWeight** = ``"call_old_weight"``

#### Defined in

[middleware/types.ts:28920](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28920)

___

### Cancel

• **Cancel** = ``"cancel"``

#### Defined in

[middleware/types.ts:28921](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28921)

___

### CancelBallot

• **CancelBallot** = ``"cancel_ballot"``

#### Defined in

[middleware/types.ts:28922](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28922)

___

### CancelDeferredSlash

• **CancelDeferredSlash** = ``"cancel_deferred_slash"``

#### Defined in

[middleware/types.ts:28923](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28923)

___

### CancelNamed

• **CancelNamed** = ``"cancel_named"``

#### Defined in

[middleware/types.ts:28924](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28924)

___

### CancelProposal

• **CancelProposal** = ``"cancel_proposal"``

#### Defined in

[middleware/types.ts:28925](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28925)

___

### CddRegisterDid

• **CddRegisterDid** = ``"cdd_register_did"``

#### Defined in

[middleware/types.ts:28926](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28926)

___

### CddRegisterDidWithCdd

• **CddRegisterDidWithCdd** = ``"cdd_register_did_with_cdd"``

#### Defined in

[middleware/types.ts:28927](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28927)

___

### ChangeAdmin

• **ChangeAdmin** = ``"change_admin"``

#### Defined in

[middleware/types.ts:28928](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28928)

___

### ChangeAllSignersAndSigsRequired

• **ChangeAllSignersAndSigsRequired** = ``"change_all_signers_and_sigs_required"``

#### Defined in

[middleware/types.ts:28929](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28929)

___

### ChangeAssetRule

• **ChangeAssetRule** = ``"change_asset_rule"``

#### Defined in

[middleware/types.ts:28930](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28930)

___

### ChangeBaseFee

• **ChangeBaseFee** = ``"change_base_fee"``

#### Defined in

[middleware/types.ts:28931](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28931)

___

### ChangeBridgeExempted

• **ChangeBridgeExempted** = ``"change_bridge_exempted"``

#### Defined in

[middleware/types.ts:28932](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28932)

___

### ChangeBridgeLimit

• **ChangeBridgeLimit** = ``"change_bridge_limit"``

#### Defined in

[middleware/types.ts:28933](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28933)

___

### ChangeCddRequirementForMkRotation

• **ChangeCddRequirementForMkRotation** = ``"change_cdd_requirement_for_mk_rotation"``

#### Defined in

[middleware/types.ts:28934](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28934)

___

### ChangeCoefficient

• **ChangeCoefficient** = ``"change_coefficient"``

#### Defined in

[middleware/types.ts:28935](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28935)

___

### ChangeComplianceRequirement

• **ChangeComplianceRequirement** = ``"change_compliance_requirement"``

#### Defined in

[middleware/types.ts:28936](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28936)

___

### ChangeController

• **ChangeController** = ``"change_controller"``

#### Defined in

[middleware/types.ts:28937](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28937)

___

### ChangeEnd

• **ChangeEnd** = ``"change_end"``

#### Defined in

[middleware/types.ts:28938](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28938)

___

### ChangeGroup

• **ChangeGroup** = ``"change_group"``

#### Defined in

[middleware/types.ts:28939](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28939)

___

### ChangeMeta

• **ChangeMeta** = ``"change_meta"``

#### Defined in

[middleware/types.ts:28940](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28940)

___

### ChangeRcv

• **ChangeRcv** = ``"change_rcv"``

#### Defined in

[middleware/types.ts:28941](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28941)

___

### ChangeReceiptValidity

• **ChangeReceiptValidity** = ``"change_receipt_validity"``

#### Defined in

[middleware/types.ts:28942](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28942)

___

### ChangeRecordDate

• **ChangeRecordDate** = ``"change_record_date"``

#### Defined in

[middleware/types.ts:28943](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28943)

___

### ChangeSigsRequired

• **ChangeSigsRequired** = ``"change_sigs_required"``

#### Defined in

[middleware/types.ts:28944](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28944)

___

### ChangeSigsRequiredViaCreator

• **ChangeSigsRequiredViaCreator** = ``"change_sigs_required_via_creator"``

#### Defined in

[middleware/types.ts:28945](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28945)

___

### ChangeSlashingAllowedFor

• **ChangeSlashingAllowedFor** = ``"change_slashing_allowed_for"``

#### Defined in

[middleware/types.ts:28946](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28946)

___

### ChangeTemplateFees

• **ChangeTemplateFees** = ``"change_template_fees"``

#### Defined in

[middleware/types.ts:28947](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28947)

___

### ChangeTemplateMetaUrl

• **ChangeTemplateMetaUrl** = ``"change_template_meta_url"``

#### Defined in

[middleware/types.ts:28948](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28948)

___

### ChangeTimelock

• **ChangeTimelock** = ``"change_timelock"``

#### Defined in

[middleware/types.ts:28949](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28949)

___

### Chill

• **Chill** = ``"chill"``

#### Defined in

[middleware/types.ts:28950](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28950)

___

### ChillFromGovernance

• **ChillFromGovernance** = ``"chill_from_governance"``

#### Defined in

[middleware/types.ts:28951](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28951)

___

### Claim

• **Claim** = ``"claim"``

#### Defined in

[middleware/types.ts:28952](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28952)

___

### ClaimClassicTicker

• **ClaimClassicTicker** = ``"claim_classic_ticker"``

#### Defined in

[middleware/types.ts:28953](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28953)

___

### ClaimItnReward

• **ClaimItnReward** = ``"claim_itn_reward"``

#### Defined in

[middleware/types.ts:28954](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28954)

___

### ClaimReceipt

• **ClaimReceipt** = ``"claim_receipt"``

#### Defined in

[middleware/types.ts:28955](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28955)

___

### ClaimSurcharge

• **ClaimSurcharge** = ``"claim_surcharge"``

#### Defined in

[middleware/types.ts:28956](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28956)

___

### ClaimUnclaimed

• **ClaimUnclaimed** = ``"claim_unclaimed"``

#### Defined in

[middleware/types.ts:28957](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28957)

___

### ClearSnapshot

• **ClearSnapshot** = ``"clear_snapshot"``

#### Defined in

[middleware/types.ts:28958](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28958)

___

### Close

• **Close** = ``"close"``

#### Defined in

[middleware/types.ts:28959](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28959)

___

### ControllerRedeem

• **ControllerRedeem** = ``"controller_redeem"``

#### Defined in

[middleware/types.ts:28960](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28960)

___

### ControllerTransfer

• **ControllerTransfer** = ``"controller_transfer"``

#### Defined in

[middleware/types.ts:28961](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28961)

___

### CreateAndChangeCustomGroup

• **CreateAndChangeCustomGroup** = ``"create_and_change_custom_group"``

#### Defined in

[middleware/types.ts:28962](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28962)

___

### CreateAsset

• **CreateAsset** = ``"create_asset"``

#### Defined in

[middleware/types.ts:28963](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28963)

___

### CreateAssetAndMint

• **CreateAssetAndMint** = ``"create_asset_and_mint"``

#### Defined in

[middleware/types.ts:28964](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28964)

___

### CreateAssetWithCustomType

• **CreateAssetWithCustomType** = ``"create_asset_with_custom_type"``

#### Defined in

[middleware/types.ts:28965](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28965)

___

### CreateCheckpoint

• **CreateCheckpoint** = ``"create_checkpoint"``

#### Defined in

[middleware/types.ts:28966](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28966)

___

### CreateChildIdentities

• **CreateChildIdentities** = ``"create_child_identities"``

#### Defined in

[middleware/types.ts:28967](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28967)

___

### CreateChildIdentity

• **CreateChildIdentity** = ``"create_child_identity"``

#### Defined in

[middleware/types.ts:28968](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28968)

___

### CreateFundraiser

• **CreateFundraiser** = ``"create_fundraiser"``

#### Defined in

[middleware/types.ts:28969](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28969)

___

### CreateGroup

• **CreateGroup** = ``"create_group"``

#### Defined in

[middleware/types.ts:28970](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28970)

___

### CreateGroupAndAddAuth

• **CreateGroupAndAddAuth** = ``"create_group_and_add_auth"``

#### Defined in

[middleware/types.ts:28971](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28971)

___

### CreateMultisig

• **CreateMultisig** = ``"create_multisig"``

#### Defined in

[middleware/types.ts:28972](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28972)

___

### CreateNftCollection

• **CreateNftCollection** = ``"create_nft_collection"``

#### Defined in

[middleware/types.ts:28973](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28973)

___

### CreateOrApproveProposalAsIdentity

• **CreateOrApproveProposalAsIdentity** = ``"create_or_approve_proposal_as_identity"``

#### Defined in

[middleware/types.ts:28974](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28974)

___

### CreateOrApproveProposalAsKey

• **CreateOrApproveProposalAsKey** = ``"create_or_approve_proposal_as_key"``

#### Defined in

[middleware/types.ts:28975](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28975)

___

### CreatePortfolio

• **CreatePortfolio** = ``"create_portfolio"``

#### Defined in

[middleware/types.ts:28976](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28976)

___

### CreateProposalAsIdentity

• **CreateProposalAsIdentity** = ``"create_proposal_as_identity"``

#### Defined in

[middleware/types.ts:28977](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28977)

___

### CreateProposalAsKey

• **CreateProposalAsKey** = ``"create_proposal_as_key"``

#### Defined in

[middleware/types.ts:28978](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28978)

___

### CreateSchedule

• **CreateSchedule** = ``"create_schedule"``

#### Defined in

[middleware/types.ts:28979](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28979)

___

### CreateVenue

• **CreateVenue** = ``"create_venue"``

#### Defined in

[middleware/types.ts:28980](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28980)

___

### DecreasePolyxLimit

• **DecreasePolyxLimit** = ``"decrease_polyx_limit"``

#### Defined in

[middleware/types.ts:28981](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28981)

___

### DeletePortfolio

• **DeletePortfolio** = ``"delete_portfolio"``

#### Defined in

[middleware/types.ts:28982](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28982)

___

### DepositBlockRewardReserveBalance

• **DepositBlockRewardReserveBalance** = ``"deposit_block_reward_reserve_balance"``

#### Defined in

[middleware/types.ts:28983](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28983)

___

### DisableMember

• **DisableMember** = ``"disable_member"``

#### Defined in

[middleware/types.ts:28984](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28984)

___

### DisallowVenues

• **DisallowVenues** = ``"disallow_venues"``

#### Defined in

[middleware/types.ts:28985](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28985)

___

### Disbursement

• **Disbursement** = ``"disbursement"``

#### Defined in

[middleware/types.ts:28986](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28986)

___

### DispatchAs

• **DispatchAs** = ``"dispatch_as"``

#### Defined in

[middleware/types.ts:28987](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28987)

___

### Distribute

• **Distribute** = ``"distribute"``

#### Defined in

[middleware/types.ts:28988](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28988)

___

### EmergencyReferendum

• **EmergencyReferendum** = ``"emergency_referendum"``

#### Defined in

[middleware/types.ts:28989](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28989)

___

### EnableIndividualCommissions

• **EnableIndividualCommissions** = ``"enable_individual_commissions"``

#### Defined in

[middleware/types.ts:28990](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28990)

___

### EnactReferendum

• **EnactReferendum** = ``"enact_referendum"``

#### Defined in

[middleware/types.ts:28991](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28991)

___

### EnactSnapshotResults

• **EnactSnapshotResults** = ``"enact_snapshot_results"``

#### Defined in

[middleware/types.ts:28992](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28992)

___

### ExecuteManualInstruction

• **ExecuteManualInstruction** = ``"execute_manual_instruction"``

#### Defined in

[middleware/types.ts:28993](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28993)

___

### ExecuteScheduledInstruction

• **ExecuteScheduledInstruction** = ``"execute_scheduled_instruction"``

#### Defined in

[middleware/types.ts:28994](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28994)

___

### ExecuteScheduledInstructionV2

• **ExecuteScheduledInstructionV2** = ``"execute_scheduled_instruction_v2"``

#### Defined in

[middleware/types.ts:28995](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28995)

___

### ExecuteScheduledInstructionV3

• **ExecuteScheduledInstructionV3** = ``"execute_scheduled_instruction_v3"``

#### Defined in

[middleware/types.ts:28996](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28996)

___

### ExecuteScheduledPip

• **ExecuteScheduledPip** = ``"execute_scheduled_pip"``

#### Defined in

[middleware/types.ts:28997](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28997)

___

### ExecuteScheduledProposal

• **ExecuteScheduledProposal** = ``"execute_scheduled_proposal"``

#### Defined in

[middleware/types.ts:28998](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28998)

___

### ExemptTickerAffirmation

• **ExemptTickerAffirmation** = ``"exempt_ticker_affirmation"``

#### Defined in

[middleware/types.ts:28999](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L28999)

___

### ExpireScheduledPip

• **ExpireScheduledPip** = ``"expire_scheduled_pip"``

#### Defined in

[middleware/types.ts:29000](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29000)

___

### FastTrackProposal

• **FastTrackProposal** = ``"fast_track_proposal"``

#### Defined in

[middleware/types.ts:29001](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29001)

___

### FillBlock

• **FillBlock** = ``"fill_block"``

#### Defined in

[middleware/types.ts:29002](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29002)

___

### FinalHint

• **FinalHint** = ``"final_hint"``

#### Defined in

[middleware/types.ts:29003](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29003)

___

### ForceBatch

• **ForceBatch** = ``"force_batch"``

#### Defined in

[middleware/types.ts:29004](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29004)

___

### ForceHandleBridgeTx

• **ForceHandleBridgeTx** = ``"force_handle_bridge_tx"``

#### Defined in

[middleware/types.ts:29005](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29005)

___

### ForceNewEra

• **ForceNewEra** = ``"force_new_era"``

#### Defined in

[middleware/types.ts:29006](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29006)

___

### ForceNewEraAlways

• **ForceNewEraAlways** = ``"force_new_era_always"``

#### Defined in

[middleware/types.ts:29007](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29007)

___

### ForceNoEras

• **ForceNoEras** = ``"force_no_eras"``

#### Defined in

[middleware/types.ts:29008](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29008)

___

### ForceTransfer

• **ForceTransfer** = ``"force_transfer"``

#### Defined in

[middleware/types.ts:29009](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29009)

___

### ForceUnstake

• **ForceUnstake** = ``"force_unstake"``

#### Defined in

[middleware/types.ts:29010](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29010)

___

### ForwardedCall

• **ForwardedCall** = ``"forwarded_call"``

#### Defined in

[middleware/types.ts:29011](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29011)

___

### Free

• **Free** = ``"free"``

#### Defined in

[middleware/types.ts:29012](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29012)

___

### Freeze

• **Freeze** = ``"freeze"``

#### Defined in

[middleware/types.ts:29013](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29013)

___

### FreezeFundraiser

• **FreezeFundraiser** = ``"freeze_fundraiser"``

#### Defined in

[middleware/types.ts:29014](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29014)

___

### FreezeInstantiation

• **FreezeInstantiation** = ``"freeze_instantiation"``

#### Defined in

[middleware/types.ts:29015](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29015)

___

### FreezeSecondaryKeys

• **FreezeSecondaryKeys** = ``"freeze_secondary_keys"``

#### Defined in

[middleware/types.ts:29016](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29016)

___

### FreezeSigningKeys

• **FreezeSigningKeys** = ``"freeze_signing_keys"``

#### Defined in

[middleware/types.ts:29017](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29017)

___

### FreezeTxs

• **FreezeTxs** = ``"freeze_txs"``

#### Defined in

[middleware/types.ts:29018](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29018)

___

### GcAddCddClaim

• **GcAddCddClaim** = ``"gc_add_cdd_claim"``

#### Defined in

[middleware/types.ts:29019](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29019)

___

### GcRevokeCddClaim

• **GcRevokeCddClaim** = ``"gc_revoke_cdd_claim"``

#### Defined in

[middleware/types.ts:29020](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29020)

___

### GetCddOf

• **GetCddOf** = ``"get_cdd_of"``

#### Defined in

[middleware/types.ts:29021](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29021)

___

### GetMyDid

• **GetMyDid** = ``"get_my_did"``

#### Defined in

[middleware/types.ts:29022](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29022)

___

### HandleBridgeTx

• **HandleBridgeTx** = ``"handle_bridge_tx"``

#### Defined in

[middleware/types.ts:29023](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29023)

___

### HandleScheduledBridgeTx

• **HandleScheduledBridgeTx** = ``"handle_scheduled_bridge_tx"``

#### Defined in

[middleware/types.ts:29024](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29024)

___

### Heartbeat

• **Heartbeat** = ``"heartbeat"``

#### Defined in

[middleware/types.ts:29025](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29025)

___

### IncreaseCustodyAllowance

• **IncreaseCustodyAllowance** = ``"increase_custody_allowance"``

#### Defined in

[middleware/types.ts:29026](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29026)

___

### IncreaseCustodyAllowanceOf

• **IncreaseCustodyAllowanceOf** = ``"increase_custody_allowance_of"``

#### Defined in

[middleware/types.ts:29027](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29027)

___

### IncreasePolyxLimit

• **IncreasePolyxLimit** = ``"increase_polyx_limit"``

#### Defined in

[middleware/types.ts:29028](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29028)

___

### IncreaseValidatorCount

• **IncreaseValidatorCount** = ``"increase_validator_count"``

#### Defined in

[middleware/types.ts:29029](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29029)

___

### InitiateCorporateAction

• **InitiateCorporateAction** = ``"initiate_corporate_action"``

#### Defined in

[middleware/types.ts:29030](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29030)

___

### InitiateCorporateActionAndDistribute

• **InitiateCorporateActionAndDistribute** = ``"initiate_corporate_action_and_distribute"``

#### Defined in

[middleware/types.ts:29031](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29031)

___

### Instantiate

• **Instantiate** = ``"instantiate"``

#### Defined in

[middleware/types.ts:29032](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29032)

___

### InstantiateOldWeight

• **InstantiateOldWeight** = ``"instantiate_old_weight"``

#### Defined in

[middleware/types.ts:29033](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29033)

___

### InstantiateWithCode

• **InstantiateWithCode** = ``"instantiate_with_code"``

#### Defined in

[middleware/types.ts:29034](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29034)

___

### InstantiateWithCodeOldWeight

• **InstantiateWithCodeOldWeight** = ``"instantiate_with_code_old_weight"``

#### Defined in

[middleware/types.ts:29035](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29035)

___

### InstantiateWithCodePerms

• **InstantiateWithCodePerms** = ``"instantiate_with_code_perms"``

#### Defined in

[middleware/types.ts:29036](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29036)

___

### InstantiateWithHashPerms

• **InstantiateWithHashPerms** = ``"instantiate_with_hash_perms"``

#### Defined in

[middleware/types.ts:29037](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29037)

___

### InvalidateCddClaims

• **InvalidateCddClaims** = ``"invalidate_cdd_claims"``

#### Defined in

[middleware/types.ts:29038](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29038)

___

### Invest

• **Invest** = ``"invest"``

#### Defined in

[middleware/types.ts:29039](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29039)

___

### IsIssuable

• **IsIssuable** = ``"is_issuable"``

#### Defined in

[middleware/types.ts:29040](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29040)

___

### Issue

• **Issue** = ``"issue"``

#### Defined in

[middleware/types.ts:29041](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29041)

___

### IssueNft

• **IssueNft** = ``"issue_nft"``

#### Defined in

[middleware/types.ts:29042](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29042)

___

### JoinIdentityAsIdentity

• **JoinIdentityAsIdentity** = ``"join_identity_as_identity"``

#### Defined in

[middleware/types.ts:29043](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29043)

___

### JoinIdentityAsKey

• **JoinIdentityAsKey** = ``"join_identity_as_key"``

#### Defined in

[middleware/types.ts:29044](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29044)

___

### KillPrefix

• **KillPrefix** = ``"kill_prefix"``

#### Defined in

[middleware/types.ts:29045](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29045)

___

### KillProposal

• **KillProposal** = ``"kill_proposal"``

#### Defined in

[middleware/types.ts:29046](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29046)

___

### KillStorage

• **KillStorage** = ``"kill_storage"``

#### Defined in

[middleware/types.ts:29047](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29047)

___

### LaunchSto

• **LaunchSto** = ``"launch_sto"``

#### Defined in

[middleware/types.ts:29048](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29048)

___

### LeaveIdentityAsIdentity

• **LeaveIdentityAsIdentity** = ``"leave_identity_as_identity"``

#### Defined in

[middleware/types.ts:29049](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29049)

___

### LeaveIdentityAsKey

• **LeaveIdentityAsKey** = ``"leave_identity_as_key"``

#### Defined in

[middleware/types.ts:29050](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29050)

___

### LegacySetPermissionToSigner

• **LegacySetPermissionToSigner** = ``"legacy_set_permission_to_signer"``

#### Defined in

[middleware/types.ts:29051](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29051)

___

### LinkCaDoc

• **LinkCaDoc** = ``"link_ca_doc"``

#### Defined in

[middleware/types.ts:29052](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29052)

___

### MakeDivisible

• **MakeDivisible** = ``"make_divisible"``

#### Defined in

[middleware/types.ts:29053](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29053)

___

### MakeMultisigPrimary

• **MakeMultisigPrimary** = ``"make_multisig_primary"``

#### Defined in

[middleware/types.ts:29054](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29054)

___

### MakeMultisigSecondary

• **MakeMultisigSecondary** = ``"make_multisig_secondary"``

#### Defined in

[middleware/types.ts:29055](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29055)

___

### MakeMultisigSigner

• **MakeMultisigSigner** = ``"make_multisig_signer"``

#### Defined in

[middleware/types.ts:29056](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29056)

___

### MockCddRegisterDid

• **MockCddRegisterDid** = ``"mock_cdd_register_did"``

#### Defined in

[middleware/types.ts:29057](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29057)

___

### ModifyExemptionList

• **ModifyExemptionList** = ``"modify_exemption_list"``

#### Defined in

[middleware/types.ts:29058](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29058)

___

### ModifyFundraiserWindow

• **ModifyFundraiserWindow** = ``"modify_fundraiser_window"``

#### Defined in

[middleware/types.ts:29059](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29059)

___

### MovePortfolioFunds

• **MovePortfolioFunds** = ``"move_portfolio_funds"``

#### Defined in

[middleware/types.ts:29060](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29060)

___

### MovePortfolioFundsV2

• **MovePortfolioFundsV2** = ``"move_portfolio_funds_v2"``

#### Defined in

[middleware/types.ts:29061](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29061)

___

### New

• **New** = ``"new"``

#### Defined in

[middleware/types.ts:29062](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29062)

___

### Nominate

• **Nominate** = ``"nominate"``

#### Defined in

[middleware/types.ts:29063](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29063)

___

### NotePreimage

• **NotePreimage** = ``"note_preimage"``

#### Defined in

[middleware/types.ts:29064](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29064)

___

### NoteStalled

• **NoteStalled** = ``"note_stalled"``

#### Defined in

[middleware/types.ts:29065](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29065)

___

### OverrideReferendumEnactmentPeriod

• **OverrideReferendumEnactmentPeriod** = ``"override_referendum_enactment_period"``

#### Defined in

[middleware/types.ts:29066](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29066)

___

### PauseAssetCompliance

• **PauseAssetCompliance** = ``"pause_asset_compliance"``

#### Defined in

[middleware/types.ts:29067](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29067)

___

### PauseAssetRules

• **PauseAssetRules** = ``"pause_asset_rules"``

#### Defined in

[middleware/types.ts:29068](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29068)

___

### PauseSto

• **PauseSto** = ``"pause_sto"``

#### Defined in

[middleware/types.ts:29069](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29069)

___

### PayoutStakers

• **PayoutStakers** = ``"payout_stakers"``

#### Defined in

[middleware/types.ts:29070](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29070)

___

### PayoutStakersBySystem

• **PayoutStakersBySystem** = ``"payout_stakers_by_system"``

#### Defined in

[middleware/types.ts:29071](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29071)

___

### PlaceholderAddAndAffirmInstruction

• **PlaceholderAddAndAffirmInstruction** = ``"placeholder_add_and_affirm_instruction"``

#### Defined in

[middleware/types.ts:29072](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29072)

___

### PlaceholderAddAndAffirmInstructionWithMemo

• **PlaceholderAddAndAffirmInstructionWithMemo** = ``"placeholder_add_and_affirm_instruction_with_memo"``

#### Defined in

[middleware/types.ts:29073](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29073)

___

### PlaceholderAddInstruction

• **PlaceholderAddInstruction** = ``"placeholder_add_instruction"``

#### Defined in

[middleware/types.ts:29074](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29074)

___

### PlaceholderAddInstructionWithMemo

• **PlaceholderAddInstructionWithMemo** = ``"placeholder_add_instruction_with_memo"``

#### Defined in

[middleware/types.ts:29075](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29075)

___

### PlaceholderAffirmInstruction

• **PlaceholderAffirmInstruction** = ``"placeholder_affirm_instruction"``

#### Defined in

[middleware/types.ts:29076](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29076)

___

### PlaceholderClaimReceipt

• **PlaceholderClaimReceipt** = ``"placeholder_claim_receipt"``

#### Defined in

[middleware/types.ts:29077](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29077)

___

### PlaceholderFillBlock

• **PlaceholderFillBlock** = ``"placeholder_fill_block"``

#### Defined in

[middleware/types.ts:29078](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29078)

___

### PlaceholderLegacySetPermissionToSigner

• **PlaceholderLegacySetPermissionToSigner** = ``"placeholder_legacy_set_permission_to_signer"``

#### Defined in

[middleware/types.ts:29079](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29079)

___

### PlaceholderRejectInstruction

• **PlaceholderRejectInstruction** = ``"placeholder_reject_instruction"``

#### Defined in

[middleware/types.ts:29080](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29080)

___

### PlaceholderUnclaimReceipt

• **PlaceholderUnclaimReceipt** = ``"placeholder_unclaim_receipt"``

#### Defined in

[middleware/types.ts:29081](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29081)

___

### PlaceholderWithdrawAffirmation

• **PlaceholderWithdrawAffirmation** = ``"placeholder_withdraw_affirmation"``

#### Defined in

[middleware/types.ts:29082](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29082)

___

### PlanConfigChange

• **PlanConfigChange** = ``"plan_config_change"``

#### Defined in

[middleware/types.ts:29083](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29083)

___

### PreApprovePortfolio

• **PreApprovePortfolio** = ``"pre_approve_portfolio"``

#### Defined in

[middleware/types.ts:29084](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29084)

___

### PreApproveTicker

• **PreApproveTicker** = ``"pre_approve_ticker"``

#### Defined in

[middleware/types.ts:29085](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29085)

___

### Propose

• **Propose** = ``"propose"``

#### Defined in

[middleware/types.ts:29086](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29086)

___

### ProposeBridgeTx

• **ProposeBridgeTx** = ``"propose_bridge_tx"``

#### Defined in

[middleware/types.ts:29087](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29087)

___

### PruneProposal

• **PruneProposal** = ``"prune_proposal"``

#### Defined in

[middleware/types.ts:29088](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29088)

___

### PurgeKeys

• **PurgeKeys** = ``"purge_keys"``

#### Defined in

[middleware/types.ts:29089](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29089)

___

### PushBenefit

• **PushBenefit** = ``"push_benefit"``

#### Defined in

[middleware/types.ts:29090](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29090)

___

### PutCode

• **PutCode** = ``"put_code"``

#### Defined in

[middleware/types.ts:29091](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29091)

___

### QuitPortfolioCustody

• **QuitPortfolioCustody** = ``"quit_portfolio_custody"``

#### Defined in

[middleware/types.ts:29092](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29092)

___

### ReapStash

• **ReapStash** = ``"reap_stash"``

#### Defined in

[middleware/types.ts:29093](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29093)

___

### Rebond

• **Rebond** = ``"rebond"``

#### Defined in

[middleware/types.ts:29094](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29094)

___

### Reclaim

• **Reclaim** = ``"reclaim"``

#### Defined in

[middleware/types.ts:29095](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29095)

___

### Redeem

• **Redeem** = ``"redeem"``

#### Defined in

[middleware/types.ts:29096](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29096)

___

### RedeemFrom

• **RedeemFrom** = ``"redeem_from"``

#### Defined in

[middleware/types.ts:29097](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29097)

___

### RedeemFromPortfolio

• **RedeemFromPortfolio** = ``"redeem_from_portfolio"``

#### Defined in

[middleware/types.ts:29098](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29098)

___

### RedeemNft

• **RedeemNft** = ``"redeem_nft"``

#### Defined in

[middleware/types.ts:29099](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29099)

___

### RegisterAndSetLocalAssetMetadata

• **RegisterAndSetLocalAssetMetadata** = ``"register_and_set_local_asset_metadata"``

#### Defined in

[middleware/types.ts:29100](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29100)

___

### RegisterAssetMetadataGlobalType

• **RegisterAssetMetadataGlobalType** = ``"register_asset_metadata_global_type"``

#### Defined in

[middleware/types.ts:29101](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29101)

___

### RegisterAssetMetadataLocalType

• **RegisterAssetMetadataLocalType** = ``"register_asset_metadata_local_type"``

#### Defined in

[middleware/types.ts:29102](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29102)

___

### RegisterCustomAssetType

• **RegisterCustomAssetType** = ``"register_custom_asset_type"``

#### Defined in

[middleware/types.ts:29103](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29103)

___

### RegisterCustomClaimType

• **RegisterCustomClaimType** = ``"register_custom_claim_type"``

#### Defined in

[middleware/types.ts:29104](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29104)

___

### RegisterDid

• **RegisterDid** = ``"register_did"``

#### Defined in

[middleware/types.ts:29105](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29105)

___

### RegisterTicker

• **RegisterTicker** = ``"register_ticker"``

#### Defined in

[middleware/types.ts:29106](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29106)

___

### Reimbursement

• **Reimbursement** = ``"reimbursement"``

#### Defined in

[middleware/types.ts:29107](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29107)

___

### RejectAsIdentity

• **RejectAsIdentity** = ``"reject_as_identity"``

#### Defined in

[middleware/types.ts:29108](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29108)

___

### RejectAsKey

• **RejectAsKey** = ``"reject_as_key"``

#### Defined in

[middleware/types.ts:29109](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29109)

___

### RejectInstruction

• **RejectInstruction** = ``"reject_instruction"``

#### Defined in

[middleware/types.ts:29110](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29110)

___

### RejectInstructionV2

• **RejectInstructionV2** = ``"reject_instruction_v2"``

#### Defined in

[middleware/types.ts:29111](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29111)

___

### RejectProposal

• **RejectProposal** = ``"reject_proposal"``

#### Defined in

[middleware/types.ts:29112](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29112)

___

### RejectReferendum

• **RejectReferendum** = ``"reject_referendum"``

#### Defined in

[middleware/types.ts:29113](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29113)

___

### RelayTx

• **RelayTx** = ``"relay_tx"``

#### Defined in

[middleware/types.ts:29114](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29114)

___

### Remark

• **Remark** = ``"remark"``

#### Defined in

[middleware/types.ts:29115](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29115)

___

### RemarkWithEvent

• **RemarkWithEvent** = ``"remark_with_event"``

#### Defined in

[middleware/types.ts:29116](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29116)

___

### RemoveActiveRule

• **RemoveActiveRule** = ``"remove_active_rule"``

#### Defined in

[middleware/types.ts:29117](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29117)

___

### RemoveAgent

• **RemoveAgent** = ``"remove_agent"``

#### Defined in

[middleware/types.ts:29118](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29118)

___

### RemoveAuthorization

• **RemoveAuthorization** = ``"remove_authorization"``

#### Defined in

[middleware/types.ts:29119](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29119)

___

### RemoveBallot

• **RemoveBallot** = ``"remove_ballot"``

#### Defined in

[middleware/types.ts:29120](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29120)

___

### RemoveCa

• **RemoveCa** = ``"remove_ca"``

#### Defined in

[middleware/types.ts:29121](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29121)

___

### RemoveCode

• **RemoveCode** = ``"remove_code"``

#### Defined in

[middleware/types.ts:29122](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29122)

___

### RemoveComplianceRequirement

• **RemoveComplianceRequirement** = ``"remove_compliance_requirement"``

#### Defined in

[middleware/types.ts:29123](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29123)

___

### RemoveCreatorControls

• **RemoveCreatorControls** = ``"remove_creator_controls"``

#### Defined in

[middleware/types.ts:29124](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29124)

___

### RemoveDefaultTrustedClaimIssuer

• **RemoveDefaultTrustedClaimIssuer** = ``"remove_default_trusted_claim_issuer"``

#### Defined in

[middleware/types.ts:29125](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29125)

___

### RemoveDistribution

• **RemoveDistribution** = ``"remove_distribution"``

#### Defined in

[middleware/types.ts:29126](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29126)

___

### RemoveDocuments

• **RemoveDocuments** = ``"remove_documents"``

#### Defined in

[middleware/types.ts:29127](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29127)

___

### RemoveExemptedEntities

• **RemoveExemptedEntities** = ``"remove_exempted_entities"``

#### Defined in

[middleware/types.ts:29128](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29128)

___

### RemoveFreezeAdmin

• **RemoveFreezeAdmin** = ``"remove_freeze_admin"``

#### Defined in

[middleware/types.ts:29129](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29129)

___

### RemoveLocalMetadataKey

• **RemoveLocalMetadataKey** = ``"remove_local_metadata_key"``

#### Defined in

[middleware/types.ts:29130](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29130)

___

### RemoveMember

• **RemoveMember** = ``"remove_member"``

#### Defined in

[middleware/types.ts:29131](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29131)

___

### RemoveMetadataValue

• **RemoveMetadataValue** = ``"remove_metadata_value"``

#### Defined in

[middleware/types.ts:29132](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29132)

___

### RemoveMultisigSigner

• **RemoveMultisigSigner** = ``"remove_multisig_signer"``

#### Defined in

[middleware/types.ts:29133](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29133)

___

### RemoveMultisigSignersViaCreator

• **RemoveMultisigSignersViaCreator** = ``"remove_multisig_signers_via_creator"``

#### Defined in

[middleware/types.ts:29134](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29134)

___

### RemovePayingKey

• **RemovePayingKey** = ``"remove_paying_key"``

#### Defined in

[middleware/types.ts:29135](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29135)

___

### RemovePermissionedValidator

• **RemovePermissionedValidator** = ``"remove_permissioned_validator"``

#### Defined in

[middleware/types.ts:29136](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29136)

___

### RemovePortfolioPreApproval

• **RemovePortfolioPreApproval** = ``"remove_portfolio_pre_approval"``

#### Defined in

[middleware/types.ts:29137](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29137)

___

### RemovePrimaryIssuanceAgent

• **RemovePrimaryIssuanceAgent** = ``"remove_primary_issuance_agent"``

#### Defined in

[middleware/types.ts:29138](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29138)

___

### RemoveSchedule

• **RemoveSchedule** = ``"remove_schedule"``

#### Defined in

[middleware/types.ts:29139](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29139)

___

### RemoveSecondaryKeys

• **RemoveSecondaryKeys** = ``"remove_secondary_keys"``

#### Defined in

[middleware/types.ts:29140](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29140)

___

### RemoveSecondaryKeysOld

• **RemoveSecondaryKeysOld** = ``"remove_secondary_keys_old"``

#### Defined in

[middleware/types.ts:29141](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29141)

___

### RemoveSigningKeys

• **RemoveSigningKeys** = ``"remove_signing_keys"``

#### Defined in

[middleware/types.ts:29142](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29142)

___

### RemoveSmartExtension

• **RemoveSmartExtension** = ``"remove_smart_extension"``

#### Defined in

[middleware/types.ts:29143](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29143)

___

### RemoveTickerAffirmationExemption

• **RemoveTickerAffirmationExemption** = ``"remove_ticker_affirmation_exemption"``

#### Defined in

[middleware/types.ts:29144](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29144)

___

### RemoveTickerPreApproval

• **RemoveTickerPreApproval** = ``"remove_ticker_pre_approval"``

#### Defined in

[middleware/types.ts:29145](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29145)

___

### RemoveTransferManager

• **RemoveTransferManager** = ``"remove_transfer_manager"``

#### Defined in

[middleware/types.ts:29146](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29146)

___

### RemoveTxs

• **RemoveTxs** = ``"remove_txs"``

#### Defined in

[middleware/types.ts:29147](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29147)

___

### RenameAsset

• **RenameAsset** = ``"rename_asset"``

#### Defined in

[middleware/types.ts:29148](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29148)

___

### RenamePortfolio

• **RenamePortfolio** = ``"rename_portfolio"``

#### Defined in

[middleware/types.ts:29149](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29149)

___

### ReplaceAssetCompliance

• **ReplaceAssetCompliance** = ``"replace_asset_compliance"``

#### Defined in

[middleware/types.ts:29150](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29150)

___

### ReplaceAssetRules

• **ReplaceAssetRules** = ``"replace_asset_rules"``

#### Defined in

[middleware/types.ts:29151](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29151)

___

### ReportEquivocation

• **ReportEquivocation** = ``"report_equivocation"``

#### Defined in

[middleware/types.ts:29152](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29152)

___

### ReportEquivocationUnsigned

• **ReportEquivocationUnsigned** = ``"report_equivocation_unsigned"``

#### Defined in

[middleware/types.ts:29153](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29153)

___

### RequestPreimage

• **RequestPreimage** = ``"request_preimage"``

#### Defined in

[middleware/types.ts:29154](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29154)

___

### RescheduleExecution

• **RescheduleExecution** = ``"reschedule_execution"``

#### Defined in

[middleware/types.ts:29155](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29155)

___

### RescheduleInstruction

• **RescheduleInstruction** = ``"reschedule_instruction"``

#### Defined in

[middleware/types.ts:29156](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29156)

___

### ReserveClassicTicker

• **ReserveClassicTicker** = ``"reserve_classic_ticker"``

#### Defined in

[middleware/types.ts:29157](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29157)

___

### ResetActiveRules

• **ResetActiveRules** = ``"reset_active_rules"``

#### Defined in

[middleware/types.ts:29158](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29158)

___

### ResetAssetCompliance

• **ResetAssetCompliance** = ``"reset_asset_compliance"``

#### Defined in

[middleware/types.ts:29159](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29159)

___

### ResetCaa

• **ResetCaa** = ``"reset_caa"``

#### Defined in

[middleware/types.ts:29160](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29160)

___

### ResetMembers

• **ResetMembers** = ``"reset_members"``

#### Defined in

[middleware/types.ts:29161](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29161)

___

### ResumeAssetCompliance

• **ResumeAssetCompliance** = ``"resume_asset_compliance"``

#### Defined in

[middleware/types.ts:29162](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29162)

___

### ResumeAssetRules

• **ResumeAssetRules** = ``"resume_asset_rules"``

#### Defined in

[middleware/types.ts:29163](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29163)

___

### RevokeClaim

• **RevokeClaim** = ``"revoke_claim"``

#### Defined in

[middleware/types.ts:29164](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29164)

___

### RevokeClaimByIndex

• **RevokeClaimByIndex** = ``"revoke_claim_by_index"``

#### Defined in

[middleware/types.ts:29165](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29165)

___

### RevokeOffchainAuthorization

• **RevokeOffchainAuthorization** = ``"revoke_offchain_authorization"``

#### Defined in

[middleware/types.ts:29166](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29166)

___

### RotatePrimaryKeyToSecondary

• **RotatePrimaryKeyToSecondary** = ``"rotate_primary_key_to_secondary"``

#### Defined in

[middleware/types.ts:29167](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29167)

___

### ScaleValidatorCount

• **ScaleValidatorCount** = ``"scale_validator_count"``

#### Defined in

[middleware/types.ts:29168](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29168)

___

### Schedule

• **Schedule** = ``"schedule"``

#### Defined in

[middleware/types.ts:29169](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29169)

___

### ScheduleAfter

• **ScheduleAfter** = ``"schedule_after"``

#### Defined in

[middleware/types.ts:29170](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29170)

___

### ScheduleNamed

• **ScheduleNamed** = ``"schedule_named"``

#### Defined in

[middleware/types.ts:29171](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29171)

___

### ScheduleNamedAfter

• **ScheduleNamedAfter** = ``"schedule_named_after"``

#### Defined in

[middleware/types.ts:29172](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29172)

___

### Set

• **Set** = ``"set"``

#### Defined in

[middleware/types.ts:29173](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29173)

___

### SetActiveAssetStats

• **SetActiveAssetStats** = ``"set_active_asset_stats"``

#### Defined in

[middleware/types.ts:29174](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29174)

___

### SetActiveMembersLimit

• **SetActiveMembersLimit** = ``"set_active_members_limit"``

#### Defined in

[middleware/types.ts:29175](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29175)

___

### SetActivePipLimit

• **SetActivePipLimit** = ``"set_active_pip_limit"``

#### Defined in

[middleware/types.ts:29176](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29176)

___

### SetAssetMetadata

• **SetAssetMetadata** = ``"set_asset_metadata"``

#### Defined in

[middleware/types.ts:29177](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29177)

___

### SetAssetMetadataDetails

• **SetAssetMetadataDetails** = ``"set_asset_metadata_details"``

#### Defined in

[middleware/types.ts:29178](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29178)

___

### SetAssetTransferCompliance

• **SetAssetTransferCompliance** = ``"set_asset_transfer_compliance"``

#### Defined in

[middleware/types.ts:29179](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29179)

___

### SetBalance

• **SetBalance** = ``"set_balance"``

#### Defined in

[middleware/types.ts:29180](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29180)

___

### SetChangesTrieConfig

• **SetChangesTrieConfig** = ``"set_changes_trie_config"``

#### Defined in

[middleware/types.ts:29181](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29181)

___

### SetCode

• **SetCode** = ``"set_code"``

#### Defined in

[middleware/types.ts:29182](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29182)

___

### SetCodeWithoutChecks

• **SetCodeWithoutChecks** = ``"set_code_without_checks"``

#### Defined in

[middleware/types.ts:29183](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29183)

___

### SetCommissionCap

• **SetCommissionCap** = ``"set_commission_cap"``

#### Defined in

[middleware/types.ts:29184](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29184)

___

### SetController

• **SetController** = ``"set_controller"``

#### Defined in

[middleware/types.ts:29185](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29185)

___

### SetDefaultEnactmentPeriod

• **SetDefaultEnactmentPeriod** = ``"set_default_enactment_period"``

#### Defined in

[middleware/types.ts:29186](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29186)

___

### SetDefaultTargets

• **SetDefaultTargets** = ``"set_default_targets"``

#### Defined in

[middleware/types.ts:29187](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29187)

___

### SetDefaultWithholdingTax

• **SetDefaultWithholdingTax** = ``"set_default_withholding_tax"``

#### Defined in

[middleware/types.ts:29188](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29188)

___

### SetDidWithholdingTax

• **SetDidWithholdingTax** = ``"set_did_withholding_tax"``

#### Defined in

[middleware/types.ts:29189](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29189)

___

### SetEntitiesExempt

• **SetEntitiesExempt** = ``"set_entities_exempt"``

#### Defined in

[middleware/types.ts:29190](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29190)

___

### SetExpiresAfter

• **SetExpiresAfter** = ``"set_expires_after"``

#### Defined in

[middleware/types.ts:29191](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29191)

___

### SetFundingRound

• **SetFundingRound** = ``"set_funding_round"``

#### Defined in

[middleware/types.ts:29192](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29192)

___

### SetGlobalCommission

• **SetGlobalCommission** = ``"set_global_commission"``

#### Defined in

[middleware/types.ts:29193](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29193)

___

### SetGroupPermissions

• **SetGroupPermissions** = ``"set_group_permissions"``

#### Defined in

[middleware/types.ts:29194](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29194)

___

### SetHeapPages

• **SetHeapPages** = ``"set_heap_pages"``

#### Defined in

[middleware/types.ts:29195](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29195)

___

### SetHistoryDepth

• **SetHistoryDepth** = ``"set_history_depth"``

#### Defined in

[middleware/types.ts:29196](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29196)

___

### SetInvulnerables

• **SetInvulnerables** = ``"set_invulnerables"``

#### Defined in

[middleware/types.ts:29197](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29197)

___

### SetItnRewardStatus

• **SetItnRewardStatus** = ``"set_itn_reward_status"``

#### Defined in

[middleware/types.ts:29198](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29198)

___

### SetKey

• **SetKey** = ``"set_key"``

#### Defined in

[middleware/types.ts:29199](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29199)

___

### SetKeys

• **SetKeys** = ``"set_keys"``

#### Defined in

[middleware/types.ts:29200](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29200)

___

### SetMasterKey

• **SetMasterKey** = ``"set_master_key"``

#### Defined in

[middleware/types.ts:29201](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29201)

___

### SetMaxDetailsLength

• **SetMaxDetailsLength** = ``"set_max_details_length"``

#### Defined in

[middleware/types.ts:29202](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29202)

___

### SetMaxPipSkipCount

• **SetMaxPipSkipCount** = ``"set_max_pip_skip_count"``

#### Defined in

[middleware/types.ts:29203](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29203)

___

### SetMinBondThreshold

• **SetMinBondThreshold** = ``"set_min_bond_threshold"``

#### Defined in

[middleware/types.ts:29204](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29204)

___

### SetMinProposalDeposit

• **SetMinProposalDeposit** = ``"set_min_proposal_deposit"``

#### Defined in

[middleware/types.ts:29205](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29205)

___

### SetPayee

• **SetPayee** = ``"set_payee"``

#### Defined in

[middleware/types.ts:29206](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29206)

___

### SetPayingKey

• **SetPayingKey** = ``"set_paying_key"``

#### Defined in

[middleware/types.ts:29207](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29207)

___

### SetPendingPipExpiry

• **SetPendingPipExpiry** = ``"set_pending_pip_expiry"``

#### Defined in

[middleware/types.ts:29208](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29208)

___

### SetPermissionToSigner

• **SetPermissionToSigner** = ``"set_permission_to_signer"``

#### Defined in

[middleware/types.ts:29209](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29209)

___

### SetPrimaryKey

• **SetPrimaryKey** = ``"set_primary_key"``

#### Defined in

[middleware/types.ts:29210](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29210)

___

### SetProposalCoolOffPeriod

• **SetProposalCoolOffPeriod** = ``"set_proposal_cool_off_period"``

#### Defined in

[middleware/types.ts:29211](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29211)

___

### SetProposalDuration

• **SetProposalDuration** = ``"set_proposal_duration"``

#### Defined in

[middleware/types.ts:29212](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29212)

___

### SetPruneHistoricalPips

• **SetPruneHistoricalPips** = ``"set_prune_historical_pips"``

#### Defined in

[middleware/types.ts:29213](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29213)

___

### SetReleaseCoordinator

• **SetReleaseCoordinator** = ``"set_release_coordinator"``

#### Defined in

[middleware/types.ts:29214](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29214)

___

### SetSchedulesMaxComplexity

• **SetSchedulesMaxComplexity** = ``"set_schedules_max_complexity"``

#### Defined in

[middleware/types.ts:29215](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29215)

___

### SetSecondaryKeyPermissions

• **SetSecondaryKeyPermissions** = ``"set_secondary_key_permissions"``

#### Defined in

[middleware/types.ts:29216](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29216)

___

### SetStorage

• **SetStorage** = ``"set_storage"``

#### Defined in

[middleware/types.ts:29217](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29217)

___

### SetUncles

• **SetUncles** = ``"set_uncles"``

#### Defined in

[middleware/types.ts:29218](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29218)

___

### SetValidatorCount

• **SetValidatorCount** = ``"set_validator_count"``

#### Defined in

[middleware/types.ts:29219](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29219)

___

### SetVenueFiltering

• **SetVenueFiltering** = ``"set_venue_filtering"``

#### Defined in

[middleware/types.ts:29220](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29220)

___

### SetVoteThreshold

• **SetVoteThreshold** = ``"set_vote_threshold"``

#### Defined in

[middleware/types.ts:29221](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29221)

___

### Snapshot

• **Snapshot** = ``"snapshot"``

#### Defined in

[middleware/types.ts:29222](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29222)

___

### Stop

• **Stop** = ``"stop"``

#### Defined in

[middleware/types.ts:29223](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29223)

___

### SubmitElectionSolution

• **SubmitElectionSolution** = ``"submit_election_solution"``

#### Defined in

[middleware/types.ts:29224](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29224)

___

### SubmitElectionSolutionUnsigned

• **SubmitElectionSolutionUnsigned** = ``"submit_election_solution_unsigned"``

#### Defined in

[middleware/types.ts:29225](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29225)

___

### Sudo

• **Sudo** = ``"sudo"``

#### Defined in

[middleware/types.ts:29226](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29226)

___

### SudoAs

• **SudoAs** = ``"sudo_as"``

#### Defined in

[middleware/types.ts:29227](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29227)

___

### SudoUncheckedWeight

• **SudoUncheckedWeight** = ``"sudo_unchecked_weight"``

#### Defined in

[middleware/types.ts:29228](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29228)

___

### SwapMember

• **SwapMember** = ``"swap_member"``

#### Defined in

[middleware/types.ts:29229](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29229)

___

### Transfer

• **Transfer** = ``"transfer"``

#### Defined in

[middleware/types.ts:29230](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29230)

___

### TransferWithMemo

• **TransferWithMemo** = ``"transfer_with_memo"``

#### Defined in

[middleware/types.ts:29231](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29231)

___

### Unbond

• **Unbond** = ``"unbond"``

#### Defined in

[middleware/types.ts:29232](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29232)

___

### UnclaimReceipt

• **UnclaimReceipt** = ``"unclaim_receipt"``

#### Defined in

[middleware/types.ts:29233](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29233)

___

### Unfreeze

• **Unfreeze** = ``"unfreeze"``

#### Defined in

[middleware/types.ts:29234](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29234)

___

### UnfreezeFundraiser

• **UnfreezeFundraiser** = ``"unfreeze_fundraiser"``

#### Defined in

[middleware/types.ts:29235](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29235)

___

### UnfreezeSecondaryKeys

• **UnfreezeSecondaryKeys** = ``"unfreeze_secondary_keys"``

#### Defined in

[middleware/types.ts:29236](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29236)

___

### UnfreezeTxs

• **UnfreezeTxs** = ``"unfreeze_txs"``

#### Defined in

[middleware/types.ts:29237](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29237)

___

### UnlinkChildIdentity

• **UnlinkChildIdentity** = ``"unlink_child_identity"``

#### Defined in

[middleware/types.ts:29238](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29238)

___

### UnnotePreimage

• **UnnotePreimage** = ``"unnote_preimage"``

#### Defined in

[middleware/types.ts:29239](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29239)

___

### UnrequestPreimage

• **UnrequestPreimage** = ``"unrequest_preimage"``

#### Defined in

[middleware/types.ts:29240](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29240)

___

### UpdateAssetType

• **UpdateAssetType** = ``"update_asset_type"``

#### Defined in

[middleware/types.ts:29241](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29241)

___

### UpdateCallRuntimeWhitelist

• **UpdateCallRuntimeWhitelist** = ``"update_call_runtime_whitelist"``

#### Defined in

[middleware/types.ts:29242](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29242)

___

### UpdateIdentifiers

• **UpdateIdentifiers** = ``"update_identifiers"``

#### Defined in

[middleware/types.ts:29243](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29243)

___

### UpdatePermissionedValidatorIntendedCount

• **UpdatePermissionedValidatorIntendedCount** = ``"update_permissioned_validator_intended_count"``

#### Defined in

[middleware/types.ts:29244](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29244)

___

### UpdatePolyxLimit

• **UpdatePolyxLimit** = ``"update_polyx_limit"``

#### Defined in

[middleware/types.ts:29245](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29245)

___

### UpdateVenueDetails

• **UpdateVenueDetails** = ``"update_venue_details"``

#### Defined in

[middleware/types.ts:29246](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29246)

___

### UpdateVenueSigners

• **UpdateVenueSigners** = ``"update_venue_signers"``

#### Defined in

[middleware/types.ts:29247](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29247)

___

### UpdateVenueType

• **UpdateVenueType** = ``"update_venue_type"``

#### Defined in

[middleware/types.ts:29248](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29248)

___

### UploadCode

• **UploadCode** = ``"upload_code"``

#### Defined in

[middleware/types.ts:29249](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29249)

___

### Validate

• **Validate** = ``"validate"``

#### Defined in

[middleware/types.ts:29250](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29250)

___

### ValidateCddExpiryNominators

• **ValidateCddExpiryNominators** = ``"validate_cdd_expiry_nominators"``

#### Defined in

[middleware/types.ts:29251](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29251)

___

### Vote

• **Vote** = ``"vote"``

#### Defined in

[middleware/types.ts:29252](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29252)

___

### VoteOrPropose

• **VoteOrPropose** = ``"vote_or_propose"``

#### Defined in

[middleware/types.ts:29253](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29253)

___

### WithWeight

• **WithWeight** = ``"with_weight"``

#### Defined in

[middleware/types.ts:29254](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29254)

___

### WithdrawAffirmation

• **WithdrawAffirmation** = ``"withdraw_affirmation"``

#### Defined in

[middleware/types.ts:29255](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29255)

___

### WithdrawAffirmationV2

• **WithdrawAffirmationV2** = ``"withdraw_affirmation_v2"``

#### Defined in

[middleware/types.ts:29256](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29256)

___

### WithdrawUnbonded

• **WithdrawUnbonded** = ``"withdraw_unbonded"``

#### Defined in

[middleware/types.ts:29257](https://github.com/PolymeshAssociation/polymesh-sdk/blob/95f248df/src/middleware/types.ts#L29257)
